@@ -1,15 +1,26 @@
-/*
- * Copyright (c) 2007-2008 Timothy Wall, All Rights Reserved
- * Parts Copyright (c) 2007 Olivier Chafik
+/* Copyright (c) 2007-2008 Timothy Wall, All Rights Reserved
+ * Copyright (c) 2007 Olivier Chafik
  *
- * This library is free software; you can
- * redistribute it and/or modify it under the terms of the GNU Lesser
- * General Public License as published by the Free Software Foundation;
- * either version 2.1 of the License, or (at your option) any later
- * version. <p/> This library is distributed in the hope that it will be
- * useful, but WITHOUT ANY WARRANTY; without even the implied warranty
- * of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
- * Lesser General Public License for more details.
+ * The contents of this file is dual-licensed under 2
+ * alternative Open Source/Free licenses: LGPL 2.1 or later and
+ * Apache License 2.0. (starting with JNA version 4.0.0).
+ *
+ * You can freely decide which license you want to apply to
+ * the project.
+ *
+ * You may obtain a copy of the LGPL License at:
+ *
+ * http://www.gnu.org/licenses/licenses.html
+ *
+ * A copy is also included in the downloadable source code package
+ * containing JNA, in file "LGPL2.1".
+ *
+ * You may obtain a copy of the Apache License at:
+ *
+ * http://www.apache.org/licenses/
+ *
+ * A copy is also included in the downloadable source code package
+ * containing JNA, in file "AL2.0".
  */
 package com.sun.jna.platform;
 
@@ -45,7 +56,10 @@ import java.awt.geom.Area;
 import java.awt.geom.PathIterator;
 import java.awt.image.BufferedImage;
 import java.awt.image.Raster;
+import java.lang.reflect.Method;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.LinkedList;
 import java.util.List;
 
 import javax.swing.Icon;
@@ -70,21 +84,37 @@ import com.sun.jna.platform.unix.X11.XVisualInfo;
 import com.sun.jna.platform.unix.X11.Xext;
 import com.sun.jna.platform.unix.X11.Xrender.XRenderPictFormat;
 import com.sun.jna.platform.win32.GDI32;
+import com.sun.jna.platform.win32.Kernel32;
+import com.sun.jna.platform.win32.Psapi;
 import com.sun.jna.platform.win32.User32;
+import com.sun.jna.platform.win32.Win32Exception;
+import com.sun.jna.platform.win32.WinDef.DWORDByReference;
 import com.sun.jna.platform.win32.WinDef.HBITMAP;
 import com.sun.jna.platform.win32.WinDef.HDC;
+import com.sun.jna.platform.win32.WinDef.HICON;
 import com.sun.jna.platform.win32.WinDef.HRGN;
 import com.sun.jna.platform.win32.WinDef.HWND;
+import com.sun.jna.platform.win32.WinDef.LPARAM;
+import com.sun.jna.platform.win32.WinDef.LRESULT;
+import com.sun.jna.platform.win32.WinDef.POINT;
+import com.sun.jna.platform.win32.WinDef.RECT;
+import com.sun.jna.platform.win32.WinDef.WPARAM;
 import com.sun.jna.platform.win32.WinGDI;
+import com.sun.jna.platform.win32.WinGDI.BITMAP;
 import com.sun.jna.platform.win32.WinGDI.BITMAPINFO;
+import com.sun.jna.platform.win32.WinGDI.BITMAPINFOHEADER;
+import com.sun.jna.platform.win32.WinGDI.ICONINFO;
+import com.sun.jna.platform.win32.WinNT;
 import com.sun.jna.platform.win32.WinNT.HANDLE;
 import com.sun.jna.platform.win32.WinUser;
 import com.sun.jna.platform.win32.WinUser.BLENDFUNCTION;
-import com.sun.jna.platform.win32.WinDef.POINT;
 import com.sun.jna.platform.win32.WinUser.SIZE;
+import com.sun.jna.platform.win32.WinUser.WNDENUMPROC;
 import com.sun.jna.ptr.ByteByReference;
 import com.sun.jna.ptr.IntByReference;
 import com.sun.jna.ptr.PointerByReference;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 /**
  * Provides additional features on a Java {@link Window}.
@@ -121,12 +151,16 @@ import com.sun.jna.ptr.PointerByReference;
  * set to its final value <em>before</em> the heavyweight peer for the Window
  * is created.  Once {@link Component#addNotify} has been called on the
  * component, causing creation of the heavyweight peer, changing this
- * property has no effect. 
+ * property has no effect.
  * @see <a href="http://developer.apple.com/technotes/tn2007/tn2196.html#APPLE_AWT_DRAGGABLEWINDOWBACKGROUND">Apple Technote 2007</a>
+ *
+ * @author Andreas "PAX" L&uuml;ck, onkelpax-git[at]yahoo.de
  */
 // TODO: setWindowMask() should accept a threshold; some cases want a
 // 50% threshold, some might want zero/non-zero
 public class WindowUtils {
+
+    private static final Logger LOG = Logger.getLogger(WindowUtils.class.getName());
 
     private static final String TRANSPARENT_OLD_BG = "transparent-old-bg";
     private static final String TRANSPARENT_OLD_OPAQUE = "transparent-old-opaque";
@@ -144,14 +178,14 @@ public class WindowUtils {
      * Ideally we'd have more control over {@link PopupFactory} but this
      * is a fairly simple, lightweight workaround.  Note that, at least as of
      * JDK 1.6, the following do not have the desired effect:<br>
-     * <code><pre>
+     * <pre><code>
      * ToolTipManager.sharedInstance().setLightWeightPopupEnabled(false);
      * JPopupMenu.setDefaultLightWeightPopupEnabled(false);
      * System.setProperty("JPopupMenu.defaultLWPopupEnabledKey", "false");
-     * </pre></code>
+     * </code></pre>
      */
     private static class HeavyweightForcer extends Window {
-		private static final long serialVersionUID = 1L;
+        private static final long serialVersionUID = 1L;
         private final boolean packed;
 
         public HeavyweightForcer(Window parent) {
@@ -160,6 +194,7 @@ public class WindowUtils {
             packed = true;
         }
 
+        @Override
         public boolean isVisible() {
             // Only want to be 'visible' once the peer is instantiated
             // via pack; this tricks PopupFactory into using a heavyweight
@@ -167,6 +202,7 @@ public class WindowUtils {
             return packed;
         }
 
+        @Override
         public Rectangle getBounds() {
             return getOwner().getBounds();
         }
@@ -177,32 +213,39 @@ public class WindowUtils {
      * invoked whenever any part of the ancestor window is repainted.
      */
     protected static class RepaintTrigger extends JComponent {
-		private static final long serialVersionUID = 1L;
+        private static final long serialVersionUID = 1L;
 
         protected class Listener
             extends WindowAdapter
             implements ComponentListener, HierarchyListener, AWTEventListener {
+            @Override
             public void windowOpened(WindowEvent e) {
                 repaint();
             }
 
+            @Override
             public void componentHidden(ComponentEvent e) {}
 
+            @Override
             public void componentMoved(ComponentEvent e) {}
 
+            @Override
             public void componentResized(ComponentEvent e) {
                 setSize(getParent().getSize());
                 repaint();
             }
 
+            @Override
             public void componentShown(ComponentEvent e) {
                 repaint();
             }
 
+            @Override
             public void hierarchyChanged(HierarchyEvent e) {
                 repaint();
             }
 
+            @Override
             public void eventDispatched(AWTEvent e) {
                 if (e instanceof MouseEvent) {
                     Component src = ((MouseEvent)e).getComponent();
@@ -225,6 +268,7 @@ public class WindowUtils {
             this.content = content;
         }
 
+        @Override
         public void addNotify() {
             super.addNotify();
             Window w = SwingUtilities.getWindowAncestor(this);
@@ -234,6 +278,7 @@ public class WindowUtils {
             Toolkit.getDefaultToolkit().addAWTEventListener(listener, AWTEvent.MOUSE_EVENT_MASK|AWTEvent.MOUSE_MOTION_EVENT_MASK);
         }
 
+        @Override
         public void removeNotify() {
             Toolkit.getDefaultToolkit().removeAWTEventListener(listener);
             Window w = SwingUtilities.getWindowAncestor(this);
@@ -243,6 +288,7 @@ public class WindowUtils {
         }
 
         private Rectangle dirty;
+        @Override
         protected void paintComponent(Graphics g) {
             Rectangle bounds = g.getClipBounds();
             if (dirty == null || !dirty.contains(bounds)) {
@@ -268,7 +314,7 @@ public class WindowUtils {
     public static abstract class NativeWindowUtils {
         protected abstract class TransparentContentPane
             extends JPanel implements AWTEventListener {
-    		private static final long serialVersionUID = 1L;
+            private static final long serialVersionUID = 1L;
             private boolean transparent;
             public TransparentContentPane(Container oldContent) {
                 super(new BorderLayout());
@@ -278,10 +324,12 @@ public class WindowUtils {
                     ((JComponent)oldContent).setOpaque(false);
                 }
             }
+            @Override
             public void addNotify() {
                 super.addNotify();
                 Toolkit.getDefaultToolkit().addAWTEventListener(this, AWTEvent.CONTAINER_EVENT_MASK);
             }
+            @Override
             public void removeNotify() {
                 Toolkit.getDefaultToolkit().removeAWTEventListener(this);
                 super.removeNotify();
@@ -292,6 +340,7 @@ public class WindowUtils {
                 setDoubleBuffered(!transparent);
                 repaint();
             }
+            @Override
             public void eventDispatched(AWTEvent e) {
                 if (e.getID() == ContainerEvent.COMPONENT_ADDED
                     && SwingUtilities.isDescendingFrom(((ContainerEvent)e).getChild(), this)) {
@@ -299,6 +348,7 @@ public class WindowUtils {
                     NativeWindowUtils.this.setDoubleBuffered(child, false);
                 }
             }
+            @Override
             public void paint(Graphics gr) {
                 if (transparent) {
                     Rectangle r = gr.getClipBounds();
@@ -345,10 +395,12 @@ public class WindowUtils {
             }
             else if (Holder.requiresVisible) {
                 getWindow(w).addWindowListener(new WindowAdapter() {
+                    @Override
                     public void windowOpened(WindowEvent e) {
                         e.getWindow().removeWindowListener(this);
                         action.run();
                     }
+                    @Override
                     public void windowClosed(WindowEvent e) {
                         e.getWindow().removeWindowListener(this);
                     }
@@ -358,6 +410,7 @@ public class WindowUtils {
                 // Hierarchy events are fired in direct response to
                 // displayability changes
                 w.addHierarchyListener(new HierarchyListener() {
+                    @Override
                     public void hierarchyChanged(HierarchyEvent e) {
                         if ((e.getChangeFlags() & HierarchyEvent.DISPLAYABILITY_CHANGED) != 0
                             && e.getComponent().isDisplayable()) {
@@ -410,6 +463,7 @@ public class WindowUtils {
         protected Shape toShape(Raster raster) {
             final Area area = new Area(new Rectangle(0, 0, 0, 0));
             RasterRangesUtils.outputOccupiedRanges(raster, new RasterRangesUtils.RangesOutput() {
+                @Override
                 public boolean outputRange(int x, int y, int w, int h) {
                     area.add(new Area(new Rectangle(x, y, w, h)));
                     return true;
@@ -474,15 +528,12 @@ public class WindowUtils {
                 JComponent content =
                     (c instanceof JComponent) ? (JComponent)c : null;
                 if (transparent) {
-                    lp.putClientProperty(TRANSPARENT_OLD_OPAQUE,
-                                         Boolean.valueOf(lp.isOpaque()));
+                    lp.putClientProperty(TRANSPARENT_OLD_OPAQUE, Boolean.valueOf(lp.isOpaque()));
                     lp.setOpaque(false);
-                    root.putClientProperty(TRANSPARENT_OLD_OPAQUE,
-                                           Boolean.valueOf(root.isOpaque()));
+                    root.putClientProperty(TRANSPARENT_OLD_OPAQUE, Boolean.valueOf(root.isOpaque()));
                     root.setOpaque(false);
                     if (content != null) {
-                        content.putClientProperty(TRANSPARENT_OLD_OPAQUE,
-                                                  Boolean.valueOf(content.isOpaque()));
+                        content.putClientProperty(TRANSPARENT_OLD_OPAQUE, Boolean.valueOf(content.isOpaque()));
                         content.setOpaque(false);
                     }
                     root.putClientProperty(TRANSPARENT_OLD_BG,
@@ -556,6 +607,108 @@ public class WindowUtils {
                 }
             }
         }
+
+        /**
+         * Obtains the set icon for the window associated with the specified
+         * window handle.
+         *
+         * @param hwnd
+         *            The concerning window handle.
+         * @return Either the window's icon or {@code null} if an error
+         *         occurred.
+         *
+         * @throws UnsupportedOperationException
+         *             Thrown if this method wasn't yet implemented for the
+         *             current platform.
+         */
+        protected BufferedImage getWindowIcon(final HWND hwnd) {
+            throw new UnsupportedOperationException("This platform is not supported, yet.");
+        }
+
+        /**
+         * Detects the size of an icon.
+         *
+         * @param hIcon
+         *            The icon handle type.
+         * @return Either the requested icon's dimension or an {@link Dimension}
+         *         instance of {@code (0, 0)}.
+         *
+         * @throws UnsupportedOperationException
+         *             Thrown if this method wasn't yet implemented for the
+         *             current platform.
+         */
+        protected Dimension getIconSize(final HICON hIcon) {
+            throw new UnsupportedOperationException("This platform is not supported, yet.");
+        }
+
+        /**
+         * Requests a list of all currently available Desktop windows.
+         *
+         * @param onlyVisibleWindows
+         *            Specifies whether only currently visible windows will be
+         *            considered ({@code true}). That are windows which are not
+         *            minimized. The {@code WS_VISIBLE} flag will be checked
+         *            (see: <a href=
+         *            "https://msdn.microsoft.com/de-de/library/windows/desktop/ms633530%28v=vs.85%29.aspx"
+         *            >User32.IsWindowVisible(HWND)</a>).
+         *
+         * @return A list with all windows and some detailed information.
+         *
+         * @throws UnsupportedOperationException
+         *             Thrown if this method wasn't yet implemented for the
+         *             current platform.
+         */
+        protected List<DesktopWindow> getAllWindows(final boolean onlyVisibleWindows) {
+            throw new UnsupportedOperationException("This platform is not supported, yet.");
+        }
+
+        /**
+         * Tries to obtain the Window's title which belongs to the specified
+         * window handle.
+         *
+         * @param hwnd
+         *            The concerning window handle.
+         * @return Either the title or an empty string of no title was found or
+         *         an error occurred.
+         *
+         * @throws UnsupportedOperationException
+         *             Thrown if this method wasn't yet implemented for the
+         */
+        protected String getWindowTitle(final HWND hwnd) {
+            throw new UnsupportedOperationException("This platform is not supported, yet.");
+        }
+
+        /**
+         * Detects the full file path of the process associated with the specified
+         * window handle.
+         *
+         * @param hwnd
+         *            The concerning window handle for which the PE file path is
+         *            required.
+         * @return The full file path of the PE file that is associated with the
+         *         specified window handle.
+         *
+         * @throws UnsupportedOperationException
+         *             Thrown if this method wasn't yet implemented for the
+         */
+        protected  String getProcessFilePath(final HWND hwnd){
+            throw new UnsupportedOperationException("This platform is not supported, yet.");
+        }
+
+        /**
+         * Requests the location and size of the window associated with the
+         * specified window handle.
+         *
+         * @param hwnd
+         *            The concerning window handle.
+         * @return The location and size of the window.
+         *
+         * @throws UnsupportedOperationException
+         *             Thrown if this method wasn't yet implemented for the
+         */
+        protected Rectangle getWindowLocationAndSize(final HWND hwnd) {
+            throw new UnsupportedOperationException("This platform is not supported, yet.");
+        }
     }
     /** Canonical lazy loading of a singleton. */
     private static class Holder {
@@ -600,6 +753,7 @@ public class WindowUtils {
          * W32 alpha will only work if <code>sun.java2d.noddraw</code>
          * is set
          */
+        @Override
         public boolean isWindowAlphaSupported() {
             return Boolean.getBoolean("sun.java2d.noddraw");
         }
@@ -619,7 +773,7 @@ public class WindowUtils {
         private void storeAlpha(Window w, byte alpha) {
             if (w instanceof RootPaneContainer) {
                 JRootPane root = ((RootPaneContainer)w).getRootPane();
-                Byte b = alpha == (byte)0xFF ? null : new Byte(alpha);
+                Byte b = alpha == (byte)0xFF ? null : Byte.valueOf(alpha);
                 root.putClientProperty(TRANSPARENT_ALPHA, b);
             }
         }
@@ -636,11 +790,13 @@ public class WindowUtils {
             return (byte)0xFF;
         }
 
+        @Override
         public void setWindowAlpha(final Window w, final float alpha) {
             if (!isWindowAlphaSupported()) {
                 throw new UnsupportedOperationException("Set sun.java2d.noddraw=true to enable transparent windows");
             }
             whenDisplayable(w, new Runnable() {
+                @Override
                 public void run() {
                     HWND hWnd = getHWnd(w);
                     User32 user = User32.INSTANCE;
@@ -664,7 +820,7 @@ public class WindowUtils {
                         flags |= WinUser.WS_EX_LAYERED;
                         user.SetWindowLong(hWnd, WinUser.GWL_EXSTYLE, flags);
                         user.SetLayeredWindowAttributes(hWnd, 0, level,
-                        		WinUser.LWA_ALPHA);
+                                WinUser.LWA_ALPHA);
                     }
                     setForceHeavyweightPopups(w, alpha != 1f);
                     storeAlpha(w, level);
@@ -677,7 +833,7 @@ public class WindowUtils {
          * when the window is transparent.
          */
         private class W32TransparentContentPane extends TransparentContentPane {
-    		private static final long serialVersionUID = 1L;
+            private static final long serialVersionUID = 1L;
             private HDC memDC;
             private HBITMAP hBitmap;
             private Pointer pbits;
@@ -696,16 +852,19 @@ public class WindowUtils {
                     memDC = null;
                 }
             }
+            @Override
             public void removeNotify() {
                 super.removeNotify();
                 disposeBackingStore();
             }
+            @Override
             public void setTransparent(boolean transparent) {
                 super.setTransparent(transparent);
                 if (!transparent) {
                     disposeBackingStore();
                 }
             }
+            @Override
             protected void paintDirect(BufferedImage buf, Rectangle bounds) {
                 // TODO: paint frame decoration if window is decorated
                 Window win = SwingUtilities.getWindowAncestor(this);
@@ -738,8 +897,8 @@ public class WindowUtils {
                         bmi.bmiHeader.biSizeImage = ww * wh * 4;
                         PointerByReference ppbits = new PointerByReference();
                         hBitmap = gdi.CreateDIBSection(memDC, bmi,
-                        		WinGDI.DIB_RGB_COLORS,
-                        		ppbits, null, 0);
+                                WinGDI.DIB_RGB_COLORS,
+                                ppbits, null, 0);
                         pbits = ppbits.getValue();
                         bitmapSize = new Dimension(ww, wh);
                     }
@@ -797,6 +956,7 @@ public class WindowUtils {
         /** Note that w32 does <em>not</em> paint window decorations when
          * the window is transparent.
          */
+        @Override
         public void setWindowTransparent(final Window w,
                                          final boolean transparent) {
             if (!(w instanceof RootPaneContainer)) {
@@ -810,6 +970,7 @@ public class WindowUtils {
             if (transparent == isTransparent)
                 return;
             whenDisplayable(w, new Runnable() {
+                @Override
                 public void run() {
                     User32 user = User32.INSTANCE;
                     HWND hWnd = getHWnd(w);
@@ -842,6 +1003,7 @@ public class WindowUtils {
             });
         }
 
+        @Override
         public void setWindowMask(final Component w, final Shape mask) {
             if (mask instanceof Area && ((Area)mask).isPolygonal()) {
                 setMask(w, (Area)mask);
@@ -854,6 +1016,7 @@ public class WindowUtils {
         // NOTE: Deletes hrgn after setting the window region
         private void setWindowRegion(final Component w, final HRGN hrgn) {
             whenDisplayable(w, new Runnable() {
+                @Override
                 public void run() {
                     GDI32 gdi = GDI32.INSTANCE;
                     User32 user = User32.INSTANCE;
@@ -890,7 +1053,7 @@ public class WindowUtils {
                     points.add(new POINT((int)coords[0], (int)coords[1]));
                 }
                 else if (type == PathIterator.SEG_CLOSE) {
-                    sizes.add(new Integer(size));
+                    sizes.add(Integer.valueOf(size));
                 }
                 else {
                     throw new RuntimeException("Area is not polygonal: " + area);
@@ -911,6 +1074,7 @@ public class WindowUtils {
             setWindowRegion(w, hrgn);
         }
 
+        @Override
         protected void setMask(final Component w, final Raster raster) {
             GDI32 gdi = GDI32.INSTANCE;
             final HRGN region = raster != null
@@ -919,6 +1083,7 @@ public class WindowUtils {
                 final HRGN tempRgn = gdi.CreateRectRgn(0, 0, 0, 0);
                 try {
                     RasterRangesUtils.outputOccupiedRanges(raster, new RasterRangesUtils.RangesOutput() {
+                        @Override
                         public boolean outputRange(int x, int y, int w, int h) {
                             GDI32 gdi = GDI32.INSTANCE;
                             gdi.SetRectRgn(tempRgn, x, y, x + w, y + h);
@@ -932,9 +1097,232 @@ public class WindowUtils {
             }
             setWindowRegion(w, region);
         }
+
+        @Override
+        public BufferedImage getWindowIcon(final HWND hwnd) {
+            // request different kind of icons if any solution fails
+            final DWORDByReference hIconNumber = new DWORDByReference();
+            LRESULT result = User32.INSTANCE
+                .SendMessageTimeout(hwnd,
+                                    WinUser.WM_GETICON,
+                                    new WPARAM(WinUser.ICON_BIG),
+                                    new LPARAM(0),
+                                    WinUser.SMTO_ABORTIFHUNG, 500, hIconNumber);
+            if (result.intValue() == 0)
+                result = User32.INSTANCE
+                    .SendMessageTimeout(hwnd,
+                                        WinUser.WM_GETICON,
+                                        new WPARAM(WinUser.ICON_SMALL),
+                                        new LPARAM(0),
+                                        WinUser.SMTO_ABORTIFHUNG, 500, hIconNumber);
+            if (result.intValue() == 0)
+                result = User32.INSTANCE
+                    .SendMessageTimeout(hwnd,
+                                        WinUser.WM_GETICON,
+                                        new WPARAM(WinUser.ICON_SMALL2),
+                                        new LPARAM(0),
+                                        WinUser.SMTO_ABORTIFHUNG, 500, hIconNumber);
+            if (result.intValue() == 0) {
+                result = new LRESULT(User32.INSTANCE
+                                     .GetClassLongPtr(hwnd,
+                                                      WinUser.GCLP_HICON).intValue());
+                hIconNumber.getValue().setValue(result.intValue());
+            }
+            if (result.intValue() == 0) {
+                result = new LRESULT(User32.INSTANCE
+                                     .GetClassLongPtr(hwnd,
+                                                      WinUser.GCLP_HICONSM).intValue());
+                hIconNumber.getValue().setValue(result.intValue());
+            }
+            if (result.intValue() == 0)
+                return null;
+
+            // draw native icon into Java image
+            final HICON hIcon = new HICON(new Pointer(hIconNumber.getValue()
+                                                      .longValue()));
+            final Dimension iconSize = getIconSize(hIcon);
+            if (iconSize.width == 0 || iconSize.height == 0)
+                return null;
+
+            final int width = iconSize.width;
+            final int height = iconSize.height;
+            final short depth = 24;
+
+            final byte[] lpBitsColor = new byte[width * height * depth / 8];
+            final Pointer lpBitsColorPtr = new Memory(lpBitsColor.length);
+            final byte[] lpBitsMask = new byte[width * height * depth / 8];
+            final Pointer lpBitsMaskPtr = new Memory(lpBitsMask.length);
+            final BITMAPINFO bitmapInfo = new BITMAPINFO();
+            final BITMAPINFOHEADER hdr = new BITMAPINFOHEADER();
+
+            bitmapInfo.bmiHeader = hdr;
+            hdr.biWidth = width;
+            hdr.biHeight = height;
+            hdr.biPlanes = 1;
+            hdr.biBitCount = depth;
+            hdr.biCompression = 0;
+            hdr.write();
+            bitmapInfo.write();
+
+            final HDC hDC = User32.INSTANCE.GetDC(null);
+            final ICONINFO iconInfo = new ICONINFO();
+            User32.INSTANCE.GetIconInfo(hIcon, iconInfo);
+            iconInfo.read();
+            GDI32.INSTANCE.GetDIBits(hDC, iconInfo.hbmColor, 0, height,
+                                     lpBitsColorPtr, bitmapInfo, 0);
+            lpBitsColorPtr.read(0, lpBitsColor, 0, lpBitsColor.length);
+            GDI32.INSTANCE.GetDIBits(hDC, iconInfo.hbmMask, 0, height,
+                                     lpBitsMaskPtr, bitmapInfo, 0);
+            lpBitsMaskPtr.read(0, lpBitsMask, 0, lpBitsMask.length);
+            final BufferedImage image = new BufferedImage(width, height,
+                                                          BufferedImage.TYPE_INT_ARGB);
+
+            int r, g, b, a, argb;
+            int x = 0, y = height - 1;
+            for (int i = 0; i < lpBitsColor.length; i = i + 3) {
+                b = lpBitsColor[i] & 0xFF;
+                g = lpBitsColor[i + 1] & 0xFF;
+                r = lpBitsColor[i + 2] & 0xFF;
+                a = 0xFF - lpBitsMask[i] & 0xFF;
+                argb = (a << 24) | (r << 16) | (g << 8) | b;
+                image.setRGB(x, y, argb);
+                x = (x + 1) % width;
+                if (x == 0)
+                    y--;
+            }
+
+            User32.INSTANCE.ReleaseDC(null, hDC);
+
+            return image;
+        }
+
+        @Override
+        public Dimension getIconSize(final HICON hIcon) {
+            final ICONINFO iconInfo = new ICONINFO();
+            try {
+                if (!User32.INSTANCE.GetIconInfo(hIcon, iconInfo))
+                    return new Dimension();
+                iconInfo.read();
+
+                final BITMAP bmp = new BITMAP();
+                if (iconInfo.hbmColor != null
+                    && iconInfo.hbmColor.getPointer() != Pointer.NULL) {
+                    final int nWrittenBytes = GDI32.INSTANCE.GetObject(
+                                                                       iconInfo.hbmColor, bmp.size(), bmp.getPointer());
+                    bmp.read();
+                    if (nWrittenBytes > 0)
+                        return new Dimension(bmp.bmWidth.intValue(),
+                                             bmp.bmHeight.intValue());
+                } else if (iconInfo.hbmMask != null
+                           && iconInfo.hbmMask.getPointer() != Pointer.NULL) {
+                    final int nWrittenBytes = GDI32.INSTANCE.GetObject(
+                                                                       iconInfo.hbmMask, bmp.size(), bmp.getPointer());
+                    bmp.read();
+                    if (nWrittenBytes > 0)
+                        return new Dimension(bmp.bmWidth.intValue(), bmp.bmHeight.intValue() / 2);
+                }
+            } finally {
+                if (iconInfo.hbmColor != null
+                    && iconInfo.hbmColor.getPointer() != Pointer.NULL)
+                    GDI32.INSTANCE.DeleteObject(iconInfo.hbmColor);
+                if (iconInfo.hbmMask != null
+                    && iconInfo.hbmMask.getPointer() != Pointer.NULL)
+                    GDI32.INSTANCE.DeleteObject(iconInfo.hbmMask);
+            }
+
+            return new Dimension();
+        }
+
+        @Override
+        public List<DesktopWindow> getAllWindows(final boolean onlyVisibleWindows) {
+            final List<DesktopWindow> result = new LinkedList<DesktopWindow>();
+
+            final WNDENUMPROC lpEnumFunc = new WNDENUMPROC() {
+                @Override
+                public boolean callback(final HWND hwnd, final Pointer arg1) {
+                    try {
+                        final boolean visible = !onlyVisibleWindows
+                            || User32.INSTANCE.IsWindowVisible(hwnd);
+                        if (visible) {
+                            final String title = getWindowTitle(hwnd);
+                            final String filePath = getProcessFilePath(hwnd);
+                            final Rectangle locAndSize = getWindowLocationAndSize(hwnd);
+                            result.add(new DesktopWindow(hwnd, title, filePath,
+                                                         locAndSize));
+                        }
+                    } catch (final Exception e) {
+                        // FIXME properly handle whatever error is raised
+                        e.printStackTrace();
+                    }
+
+                    return true;
+                }
+            };
+
+            if (!User32.INSTANCE.EnumWindows(lpEnumFunc, null))
+                throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
+
+            return result;
+        }
+
+        @Override
+        public String getWindowTitle(final HWND hwnd) {
+            final int requiredLength = User32.INSTANCE
+                .GetWindowTextLength(hwnd) + 1;
+            final char[] title = new char[requiredLength];
+            final int length = User32.INSTANCE.GetWindowText(hwnd, title,
+                                                             title.length);
+
+            return Native.toString(Arrays.copyOfRange(title, 0, length));
+        }
+
+        @Override
+        public String getProcessFilePath(final HWND hwnd) {
+            final char[] filePath = new char[2048];
+            final IntByReference pid = new IntByReference();
+            User32.INSTANCE.GetWindowThreadProcessId(hwnd, pid);
+
+            final HANDLE process = Kernel32.INSTANCE.OpenProcess(WinNT.PROCESS_QUERY_INFORMATION | WinNT.PROCESS_VM_READ,
+                                                                 false, pid.getValue());
+            if (process == null) {
+                if(Kernel32.INSTANCE.GetLastError() != WinNT.ERROR_ACCESS_DENIED) {
+                    throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
+                } else {
+                    // Ignore windows, that can't be accessed
+                    return "";
+                }
+            }
+
+            try {
+                final int length = Psapi.INSTANCE.GetModuleFileNameExW(process,
+                                                                       null, filePath, filePath.length);
+                if (length == 0) {
+                    if(Kernel32.INSTANCE.GetLastError() != WinNT.ERROR_INVALID_HANDLE) {
+                        throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
+                    } else {
+                        // ignore invalid handles
+                        return "";
+                    }
+                }
+                return Native.toString(filePath).trim();
+            } finally {
+                Kernel32.INSTANCE.CloseHandle(process);
+            }
+        }
+
+        @Override
+        public Rectangle getWindowLocationAndSize(final HWND hwnd) {
+            final RECT lpRect = new RECT();
+            if (!User32.INSTANCE.GetWindowRect(hwnd, lpRect))
+                throw new Win32Exception(Kernel32.INSTANCE.GetLastError());
+
+            return new Rectangle(lpRect.left, lpRect.top, Math.abs(lpRect.right
+                                                                   - lpRect.left), Math.abs(lpRect.bottom - lpRect.top));
+        }
     }
 
     private static class MacWindowUtils extends NativeWindowUtils {
+        @Override
         public boolean isWindowAlphaSupported() {
             return true;
         }
@@ -975,6 +1363,7 @@ public class WindowUtils {
          * property has no effect.
          * @see <a href="http://developer.apple.com/technotes/tn2007/tn2196.html#APPLE_AWT_DRAGGABLEWINDOWBACKGROUND">Apple Technote 2007</a>
          */
+        @Override
         public void setWindowTransparent(Window w, boolean transparent) {
             boolean isTransparent = w.getBackground() != null
                 && w.getBackground().getAlpha() == 0;
@@ -992,12 +1381,13 @@ public class WindowUtils {
                 if (oldDraggable == null) {
                     p.putClientProperty(WDRAG, Boolean.FALSE);
                     if (w.isDisplayable()) {
-                        System.err.println(context + "(): To avoid content dragging, " + context + "() must be called before the window is realized, or " + WDRAG + " must be set to Boolean.FALSE before the window is realized.  If you really want content dragging, set " + WDRAG + " on the window's root pane to Boolean.TRUE before calling " + context + "() to hide this message.");
+                        LOG.log(Level.WARNING, "{0}(): To avoid content dragging, {1}() must be called before the window is realized, or " + WDRAG + " must be set to Boolean.FALSE before the window is realized.  If you really want content dragging, set " + WDRAG + " on the window''s root pane to Boolean.TRUE before calling {2}() to hide this message.",
+                                new Object[]{context, context, context});
                     }
                 }
             }
         }
-        
+
         /** Note that the property
          * <code>apple.awt.draggableWindowBackground</code> must be set to its
          * final value <em>before</em> the heavyweight peer for the Window is
@@ -1006,21 +1396,23 @@ public class WindowUtils {
          * property has no effect.
          * @see <a href="http://developer.apple.com/technotes/tn2007/tn2196.html#APPLE_AWT_DRAGGABLEWINDOWBACKGROUND">Apple Technote 2007</a>
          */
+        @Override
         public void setWindowAlpha(final Window w, final float alpha) {
             if (w instanceof RootPaneContainer) {
                 JRootPane p = ((RootPaneContainer)w).getRootPane();
-                p.putClientProperty("Window.alpha", new Float(alpha));
+                p.putClientProperty("Window.alpha", Float.valueOf(alpha));
                 fixWindowDragging(w, "setWindowAlpha");
             }
             whenDisplayable(w, new Runnable() {
-				public void run() {
-                    Object peer = w.getPeer();
+                @Override
+                public void run() {
                     try {
-                        peer.getClass().getMethod("setAlpha", new Class[]{
-                                float.class
-                            }).invoke(peer, new Object[]{
-                                    new Float(alpha)
-                                });
+                        // This will work with old Apple AWT implementations and
+                        // not with openjdk
+                        Method getPeer = w.getClass().getMethod("getPeer");
+                        Object peer = getPeer.invoke(w);
+                        Method setAlpha = peer.getClass().getMethod("setAlpha", new Class[]{ float.class });
+                        setAlpha.invoke(peer, Float.valueOf(alpha));
                     }
                     catch (Exception e) {
                     }
@@ -1028,6 +1420,7 @@ public class WindowUtils {
             });
         }
 
+        @Override
         protected void setWindowMask(Component w, Raster raster) {
             if (raster != null) {
                 setWindowMask(w, toShape(raster));
@@ -1038,6 +1431,7 @@ public class WindowUtils {
             }
         }
 
+        @Override
         public void setWindowMask(Component c, final Shape shape) {
             if (c instanceof Window) {
                 Window w = (Window)c;
@@ -1054,7 +1448,7 @@ public class WindowUtils {
          * @author Olivier Chafik
          */
         private static class OSXMaskingContentPane extends JPanel {
-    		private static final long serialVersionUID = 1L;
+            private static final long serialVersionUID = 1L;
             private Shape shape;
 
             public OSXMaskingContentPane(Component oldContent) {
@@ -1069,6 +1463,7 @@ public class WindowUtils {
                 repaint();
             }
 
+            @Override
             public void paint(Graphics graphics) {
                 Graphics2D g = (Graphics2D)graphics.create();
                 g.setComposite(AlphaComposite.Clear);
@@ -1132,6 +1527,7 @@ public class WindowUtils {
             final List<Rectangle> rlist = new ArrayList<Rectangle>();
             try {
                 RasterRangesUtils.outputOccupiedRanges(raster, new RasterRangesUtils.RangesOutput() {
+                    @Override
                     public boolean outputRange(int x, int y, int w, int h) {
                         rlist.add(new Rectangle(x, y, w, h));
                         return true;
@@ -1167,6 +1563,7 @@ public class WindowUtils {
         private boolean didCheck;
         private long[] alphaVisualIDs = {};
 
+        @Override
         public boolean isWindowAlphaSupported() {
             return getAlphaVisualIDs().length > 0;
         }
@@ -1181,12 +1578,14 @@ public class WindowUtils {
                 return ((Number)o).longValue();
             }
             catch (Exception e) {
+                // FIXME properly handle this error
                 e.printStackTrace();
                 return -1;
             }
         }
 
         /** Return the default graphics configuration. */
+        @Override
         public GraphicsConfiguration getAlphaCompatibleGraphicsConfiguration() {
             if (isWindowAlphaSupported()) {
                 GraphicsEnvironment env =
@@ -1302,11 +1701,13 @@ public class WindowUtils {
         private static final long OPAQUE = 0xFFFFFFFFL;
         private static final String OPACITY = "_NET_WM_WINDOW_OPACITY";
 
+        @Override
         public void setWindowAlpha(final Window w, final float alpha) {
             if (!isWindowAlphaSupported()) {
                 throw new UnsupportedOperationException("This X11 display does not provide a 32-bit visual");
             }
             Runnable action = new Runnable() {
+                @Override
                 public void run() {
                     X11 x11 = X11.INSTANCE;
                     Display dpy = x11.XOpenDisplay(null);
@@ -1339,7 +1740,7 @@ public class WindowUtils {
         }
 
         private class X11TransparentContentPane extends TransparentContentPane {
-    		private static final long serialVersionUID = 1L;
+            private static final long serialVersionUID = 1L;
 
             public X11TransparentContentPane(Container oldContent) {
                 super(oldContent);
@@ -1351,7 +1752,8 @@ public class WindowUtils {
             // Painting directly to the original Graphics
             // fails to properly composite unless the destination
             // is pure black.  Too bad.
-			protected void paintDirect(BufferedImage buf, Rectangle bounds) {
+            @Override
+            protected void paintDirect(BufferedImage buf, Rectangle bounds) {
                 Window window = SwingUtilities.getWindowAncestor(this);
                 X11 x11 = X11.INSTANCE;
                 X11.Display dpy = x11.XOpenDisplay(null);
@@ -1395,6 +1797,7 @@ public class WindowUtils {
             }
         }
 
+        @Override
         public void setWindowTransparent(final Window w,
                                          final boolean transparent) {
             if (!(w instanceof RootPaneContainer)) {
@@ -1412,6 +1815,7 @@ public class WindowUtils {
             if (transparent == isTransparent)
                 return;
             whenDisplayable(w, new Runnable() {
+                @Override
                 public void run() {
                     JRootPane root = ((RootPaneContainer)w).getRootPane();
                     JLayeredPane lp = root.getLayeredPane();
@@ -1439,6 +1843,7 @@ public class WindowUtils {
 
         private void setWindowShape(final Window w, final PixmapSource src) {
             Runnable action = new Runnable() {
+                @Override
                 public void run() {
                     X11 x11 = X11.INSTANCE;
                     Display dpy = x11.XOpenDisplay(null);
@@ -1466,8 +1871,10 @@ public class WindowUtils {
             whenDisplayable(w, action);
         }
 
+        @Override
         protected void setMask(final Component w, final Raster raster) {
             setWindowShape(getWindow(w), new PixmapSource() {
+                @Override
                 public Pixmap getPixmap(Display dpy, X11.Window win) {
                     return raster != null ? createBitmap(dpy, win, raster) : null;
                 }
@@ -1526,7 +1933,7 @@ public class WindowUtils {
      * final value <em>before</em> the heavyweight peer for the Window is
      * created.  Once {@link Component#addNotify} has been called on the
      * component, causing creation of the heavyweight peer, changing this
-     * property has no effect. 
+     * property has no effect.
      * @see <a href="http://developer.apple.com/technotes/tn2007/tn2196.html#APPLE_AWT_DRAGGABLEWINDOWBACKGROUND">Apple Technote 2007</a>
      */
     public static void setWindowAlpha(Window w, float alpha) {
@@ -1537,7 +1944,7 @@ public class WindowUtils {
      * Set the window to be transparent. Only explicitly painted pixels
      * will be non-transparent. All pixels will be composited with
      * whatever is under the window using their alpha values.
-     * 
+     *
      * On OSX, the property <code>apple.awt.draggableWindowBackground</code>
      * must be set to its final value <em>before</em> the heavyweight peer for
      * the Window is created.  Once {@link Component#addNotify} has been
@@ -1547,5 +1954,87 @@ public class WindowUtils {
      */
     public static void setWindowTransparent(Window w, boolean transparent) {
         getInstance().setWindowTransparent(w, transparent);
+    }
+
+    /**
+     * Obtains the set icon for the window associated with the specified
+     * window handle.
+     *
+     * @param hwnd
+     *            The concerning window handle.
+     * @return Either the window's icon or {@code null} if an error
+     *         occurred.
+     */
+    public  static BufferedImage getWindowIcon(final HWND hwnd) {
+        return getInstance().getWindowIcon(hwnd);
+    }
+
+    /**
+     * Detects the size of an icon.
+     *
+     * @param hIcon
+     *            The icon handle type.
+     * @return Either the requested icon's dimension or an {@link Dimension}
+     *         instance of {@code (0, 0)}.
+     */
+    public static Dimension getIconSize(final HICON hIcon) {
+        return getInstance().getIconSize(hIcon);
+    }
+
+    /**
+     * Requests a list of all currently available Desktop windows.
+     *
+     * @param onlyVisibleWindows
+     *            Specifies whether only currently visible windows will be
+     *            considered ({@code true}). That are windows which are not
+     *            minimized. The {@code WS_VISIBLE} flag will be checked (see:
+     *            <a href=
+     *            "https://msdn.microsoft.com/de-de/library/windows/desktop/ms633530%28v=vs.85%29.aspx"
+     *            >User32.IsWindowVisible(HWND)</a>).
+     *
+     * @return A list with all windows and some detailed information.
+     */
+    public static List<DesktopWindow> getAllWindows(
+            final boolean onlyVisibleWindows) {
+        return getInstance().getAllWindows(onlyVisibleWindows);
+    }
+
+    /**
+     * Tries to obtain the Window's title which belongs to the specified window
+     * handle.
+     *
+     * @param hwnd
+     *            The concerning window handle.
+     * @return Either the title or an empty string of no title was found or an
+     *         error occurred.
+     */
+    public static String getWindowTitle(final HWND hwnd) {
+        return getInstance().getWindowTitle(hwnd);
+    }
+
+    /**
+     * Detects the full file path of the process associated with the specified
+     * window handle.
+     *
+     * @param hwnd
+     *            The concerning window handle for which the PE file path is
+     *            required.
+     * @return The full file path of the PE file that is associated with the
+     *         specified window handle.
+     */
+    public static String getProcessFilePath(final HWND hwnd) {
+        return getInstance().getProcessFilePath(hwnd);
+    }
+
+    /**
+     * Requests the location and size of the window associated with the
+     * specified window handle.
+     *
+     * @param hwnd
+     *            The concerning window handle.
+     * @return The location and size of the window.
+     */
+    public static Rectangle getWindowLocationAndSize(final HWND hwnd) {
+        return getInstance().getWindowLocationAndSize(hwnd);
     }
 }
