@@ -1,14 +1,25 @@
 /* Copyright (c) 2007 Timothy Wall, All Rights Reserved
- * 
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version.
- * 
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.  
+ *
+ * The contents of this file is dual-licensed under 2
+ * alternative Open Source/Free licenses: LGPL 2.1 or later and
+ * Apache License 2.0. (starting with JNA version 4.0.0).
+ *
+ * You can freely decide which license you want to apply to
+ * the project.
+ *
+ * You may obtain a copy of the LGPL License at:
+ *
+ * http://www.gnu.org/licenses/licenses.html
+ *
+ * A copy is also included in the downloadable source code package
+ * containing JNA, in file "LGPL2.1".
+ *
+ * You may obtain a copy of the Apache License at:
+ *
+ * http://www.apache.org/licenses/
+ *
+ * A copy is also included in the downloadable source code package
+ * containing JNA, in file "AL2.0".
  */
 package com.sun.jna.win32;
 
@@ -20,7 +31,7 @@ import com.sun.jna.TypeConverter;
 import com.sun.jna.TypeMapper;
 import com.sun.jna.WString;
 
-/** Provide standard conversion for W32 API types.  This comprises the 
+/** Provide standard conversion for W32 API types.  This comprises the
  * following native types:
  * <ul>
  * <li>Unicode or ASCII/MBCS strings and arrays of string, as appropriate
@@ -29,13 +40,17 @@ import com.sun.jna.WString;
  * @author twall
  */
 public class W32APITypeMapper extends DefaultTypeMapper {
-    
+    /** Standard TypeMapper to use the unicode version of a w32 API. */
     public static final TypeMapper UNICODE = new W32APITypeMapper(true);
+    /** Standard TypeMapper to use the ASCII/MBCS version of a w32 API. */
     public static final TypeMapper ASCII = new W32APITypeMapper(false);
-    
+    /** Default TypeMapper to use - depends on the value of {@code w32.ascii} system property */
+    public static final TypeMapper DEFAULT = Boolean.getBoolean("w32.ascii") ? ASCII : UNICODE;
+
     protected W32APITypeMapper(boolean unicode) {
         if (unicode) {
             TypeConverter stringConverter = new TypeConverter() {
+                @Override
                 public Object toNative(Object value, ToNativeContext context) {
                     if (value == null)
                         return null;
@@ -44,12 +59,14 @@ public class W32APITypeMapper extends DefaultTypeMapper {
                     }
                     return new WString(value.toString());
                 }
+                @Override
                 public Object fromNative(Object value, FromNativeContext context) {
                     if (value == null)
                         return null;
                     return value.toString();
                 }
-                public Class nativeType() {
+                @Override
+                public Class<?> nativeType() {
                     return WString.class;
                 }
             };
@@ -57,13 +74,16 @@ public class W32APITypeMapper extends DefaultTypeMapper {
             addToNativeConverter(String[].class, stringConverter);
         }
         TypeConverter booleanConverter = new TypeConverter() {
+            @Override
             public Object toNative(Object value, ToNativeContext context) {
-                return new Integer(Boolean.TRUE.equals(value) ? 1 : 0);
+                return Integer.valueOf(Boolean.TRUE.equals(value) ? 1 : 0);
             }
+            @Override
             public Object fromNative(Object value, FromNativeContext context) {
                 return ((Integer)value).intValue() != 0 ? Boolean.TRUE : Boolean.FALSE;
             }
-            public Class nativeType() {
+            @Override
+            public Class<?> nativeType() {
                 // BOOL is 32-bit int
                 return Integer.class;
             }
