@@ -1,36 +1,48 @@
 /* Copyright (c) 2007-2013 Timothy Wall, All Rights Reserved
  *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version.
- * <p/>
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.  
+ * The contents of this file is dual-licensed under 2
+ * alternative Open Source/Free licenses: LGPL 2.1 or later and
+ * Apache License 2.0. (starting with JNA version 4.0.0).
+ *
+ * You can freely decide which license you want to apply to
+ * the project.
+ *
+ * You may obtain a copy of the LGPL License at:
+ *
+ * http://www.gnu.org/licenses/licenses.html
+ *
+ * A copy is also included in the downloadable source code package
+ * containing JNA, in file "LGPL2.1".
+ *
+ * You may obtain a copy of the Apache License at:
+ *
+ * http://www.apache.org/licenses/
+ *
+ * A copy is also included in the downloadable source code package
+ * containing JNA, in file "AL2.0".
  */
 package com.sun.jna;
 
 import java.io.ByteArrayOutputStream;
-import java.io.File;
 import java.io.PrintStream;
+import java.lang.ref.Reference;
 import java.lang.ref.WeakReference;
+import java.nio.charset.Charset;
 import java.util.Arrays;
-import java.util.HashMap;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.WeakHashMap;
 
-import junit.framework.TestCase;
-
 import com.sun.jna.Callback.UncaughtExceptionHandler;
 import com.sun.jna.CallbacksTest.TestLibrary.CbCallback;
 import com.sun.jna.ptr.IntByReference;
 import com.sun.jna.ptr.PointerByReference;
 import com.sun.jna.win32.W32APIOptions;
+
+import junit.framework.TestCase;
 
 /** Exercise callback-related functionality.
  *
@@ -39,6 +51,13 @@ import com.sun.jna.win32.W32APIOptions;
 //@SuppressWarnings("unused")
 public class CallbacksTest extends TestCase implements Paths {
 
+    // On OSX, on Oracle JVM 1.8+, pthread cleanup thinks the native thread is
+    // not attached, and the JVM never unmaps the defunct native thread.  In
+    // order to avoid this situation causing tests to time out, we need to
+    // explicitly detach the native thread after our Java code is done with it.
+    // Also reproducible on Ubuntu 6 (x86-64), Java 6
+    private static final boolean THREAD_DETACH_BUG = Platform.isMac() || (Platform.isLinux() && Platform.is64Bit());
+
     private static final String UNICODE = "[\u0444]";
 
     private static final double DOUBLE_MAGIC = -118.625d;
@@ -46,17 +65,34 @@ public class CallbacksTest extends TestCase implements Paths {
 
     private static final int THREAD_TIMEOUT = 5000;
 
+    protected void waitFor(Thread thread) {
+        long start = System.currentTimeMillis();
+        while (thread.isAlive()) {
+            try {
+                Thread.sleep(10);
+            } catch (InterruptedException e) {
+            }
+            if (System.currentTimeMillis() - start > THREAD_TIMEOUT) {
+                fail("Timed out waiting for native thread " + thread
+                        + " to detach and terminate");
+            }
+        }
+    }
+
     public static class SmallTestStructure extends Structure {
+        public static final List<String> FIELDS = createFieldsOrder("value");
         public double value;
         public static int allocations = 0;
+        @Override
         protected void allocateMemory(int size) {
             super.allocateMemory(size);
             ++allocations;
         }
         public SmallTestStructure() { }
         public SmallTestStructure(Pointer p) { super(p); read(); }
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "value" });
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
     public static class TestStructure extends Structure {
@@ -64,13 +100,16 @@ public class CallbacksTest extends TestCase implements Paths {
         public static interface TestCallback extends Callback {
             TestStructure.ByValue callback(TestStructure.ByValue s);
         }
+
+        public static final List<String> FIELDS = createFieldsOrder("c", "s", "i", "j", "inner");
         public byte c;
         public short s;
         public int i;
         public long j;
         public SmallTestStructure inner;
-        protected List getFieldOrder() {
-            return Arrays.asList(new String[] { "c", "s", "i", "j", "inner" }); 
+        @Override
+        protected List<String> getFieldOrder() {
+            return FIELDS;
         }
     }
     public static interface TestLibrary extends Library {
@@ -91,11 +130,12 @@ public class CallbacksTest extends TestCase implements Paths {
             void callback();
         }
         void callVoidCallback(VoidCallback c);
-        void callVoidCallbackThreaded(VoidCallback c, int count, int ms, String name);
+        void callVoidCallbackThreaded(VoidCallback c, int count, int ms, String name, int stacksize);
         interface VoidCallbackCustom extends Callback {
             void customMethodName();
         }
         abstract class VoidCallbackCustomAbstract implements VoidCallbackCustom {
+            @Override
             public void customMethodName() { }
         }
         class VoidCallbackCustomDerived extends VoidCallbackCustomAbstract { }
@@ -137,15 +177,15 @@ public class CallbacksTest extends TestCase implements Paths {
         }
         SmallTestStructure callStructureCallback(StructureCallback c, SmallTestStructure arg);
         interface StringCallback extends Callback {
-            String callback(String arg);
+            String callback(String arg, String arg2);
         }
-        String callStringCallback(StringCallback c, String arg);
+        String callStringCallback(StringCallback c, String arg, String arg2);
         interface WideStringCallback extends Callback {
-            WString callback(WString arg);
+            WString callback(WString arg, WString arg2);
         }
-        WString callWideStringCallback(WideStringCallback c, WString arg);
+        WString callWideStringCallback(WideStringCallback c, WString arg, WString arg2);
         interface CopyArgToByReference extends Callback {
-        	int callback(int arg, IntByReference result);
+            int callback(int arg, IntByReference result);
         }
         interface StringArrayCallback extends Callback {
             String[] callback(String[] arg);
@@ -171,7 +211,8 @@ public class CallbacksTest extends TestCase implements Paths {
 
         class CbStruct extends Structure {
             public Callback cb;
-            protected List getFieldOrder() {
+            @Override
+            protected List<String> getFieldOrder() {
                 return Arrays.asList(new String[] { "cb" });
             }
         }
@@ -190,10 +231,12 @@ public class CallbacksTest extends TestCase implements Paths {
 
     TestLibrary lib;
 
+    @Override
     protected void setUp() {
-        lib = (TestLibrary)Native.loadLibrary("testlib", TestLibrary.class);
+        lib = Native.load("testlib", TestLibrary.class);
     }
-    
+
+    @Override
     protected void tearDown() {
         lib = null;
     }
@@ -204,15 +247,19 @@ public class CallbacksTest extends TestCase implements Paths {
         public Custom(int value) {
             this.value = value;
         }
+        @Override
         public Object fromNative(Object nativeValue, FromNativeContext context) {
             return new Custom(((Integer)nativeValue).intValue());
         }
-        public Class nativeType() {
+        @Override
+        public Class<?> nativeType() {
             return Integer.class;
         }
+        @Override
         public Object toNative() {
-            return new Integer(value);
+            return Integer.valueOf(value);
         }
+        @Override
         public boolean equals(Object o) {
             return o instanceof Custom && ((Custom)o).value == value;
         }
@@ -224,8 +271,8 @@ public class CallbacksTest extends TestCase implements Paths {
         try {
             CallbackReference.getCallback(TestLibrary.VoidCallback.class, new Pointer(0));
             fail("Null pointer lookup should fail");
-        }
-        catch(NullPointerException e) {
+        } catch(NullPointerException e) {
+            // expected
         }
     }
 
@@ -277,7 +324,7 @@ public class CallbacksTest extends TestCase implements Paths {
 
     public void testNativeFunctionPointerStringValue() {
         Callback cb = CallbackReference.getCallback(TestLibrary.VoidCallback.class, new Pointer(getName().hashCode()));
-        Class cls = CallbackReference.findCallbackClass(cb.getClass());
+        Class<?> cls = CallbackReference.findCallbackClass(cb.getClass());
         assertTrue("toString should include Java Callback type: " + cb + " ("
                    + cls + ")", cb.toString().indexOf(cls.getName()) != -1);
     }
@@ -285,12 +332,12 @@ public class CallbacksTest extends TestCase implements Paths {
     public void testLookupSameCallback() {
         Callback cb = CallbackReference.getCallback(TestLibrary.VoidCallback.class, new Pointer(getName().hashCode()));
         Callback cb2 = CallbackReference.getCallback(TestLibrary.VoidCallback.class, new Pointer(getName().hashCode()));
-        
+
         assertEquals("Callback lookups for same pointer should return same Callback object", cb, cb2);
     }
 
     // Allow direct tests to override
-    protected Map callbackCache() {
+    protected Map<Callback, CallbackReference> callbackCache() {
         return CallbackReference.callbackMap;
     }
 
@@ -298,30 +345,29 @@ public class CallbacksTest extends TestCase implements Paths {
     public void testGCCallbackOnFinalize() throws Exception {
         final boolean[] called = { false };
         TestLibrary.VoidCallback cb = new TestLibrary.VoidCallback() {
+            @Override
             public void callback() {
                 called[0] = true;
             }
         };
         lib.callVoidCallback(cb);
         assertTrue("Callback not called", called[0]);
-        
-        Map refs = new WeakHashMap(callbackCache());
+
+        Map<Callback, CallbackReference> refs = new WeakHashMap<Callback, CallbackReference>(callbackCache());
         assertTrue("Callback not cached", refs.containsKey(cb));
-        CallbackReference ref = (CallbackReference)refs.get(cb);
+        CallbackReference ref = refs.get(cb);
         refs = callbackCache();
         Pointer cbstruct = ref.cbstruct;
-        
+
         cb = null;
         System.gc();
         for (int i = 0; i < 100 && (ref.get() != null || refs.containsValue(ref)); ++i) {
-            try {
-                Thread.sleep(10); // Give the GC a chance to run
-                System.gc();
-            } finally {}
+            Thread.sleep(10); // Give the GC a chance to run
+            System.gc();
         }
         assertNull("Callback not GC'd", ref.get());
         assertFalse("Callback still in map", refs.containsValue(ref));
-        
+
         ref = null;
         System.gc();
         for (int i = 0; i < 100 && (cbstruct.peer != 0 || refs.size() > 0); ++i) {
@@ -334,9 +380,10 @@ public class CallbacksTest extends TestCase implements Paths {
         }
         assertEquals("Callback trampoline not freed", 0, cbstruct.peer);
     }
-    
+
     public void testFindCallbackInterface() {
         TestLibrary.Int32Callback cb = new TestLibrary.Int32Callback() {
+            @Override
             public int callback(int arg, int arg2) {
                 return arg + arg2;
             }
@@ -349,6 +396,7 @@ public class CallbacksTest extends TestCase implements Paths {
     public void testCallVoidCallback() {
         final boolean[] called = { false };
         TestLibrary.VoidCallback cb = new TestLibrary.VoidCallback() {
+            @Override
             public void callback() {
                 called[0] = true;
             }
@@ -361,6 +409,7 @@ public class CallbacksTest extends TestCase implements Paths {
         final int MAGIC = 0x11111111;
         final boolean[] called = { false };
         TestLibrary.Int32Callback cb = new TestLibrary.Int32Callback() {
+            @Override
             public int callback(int arg, int arg2) {
                 called[0] = true;
                 return arg + arg2;
@@ -369,17 +418,18 @@ public class CallbacksTest extends TestCase implements Paths {
         final int EXPECTED = MAGIC*3;
         int value = lib.callInt32Callback(cb, MAGIC, MAGIC*2);
         assertTrue("Callback not called", called[0]);
-        assertEquals("Wrong callback value", Integer.toHexString(EXPECTED), 
+        assertEquals("Wrong callback value", Integer.toHexString(EXPECTED),
                      Integer.toHexString(value));
-        
+
         value = lib.callInt32Callback(cb, -1, -2);
         assertEquals("Wrong callback return", -3, value);
     }
-    
+
     public void testCallInt64Callback() {
         final long MAGIC = 0x1111111111111111L;
         final boolean[] called = { false };
         TestLibrary.Int64Callback cb = new TestLibrary.Int64Callback() {
+            @Override
             public long callback(long arg, long arg2) {
                 called[0] = true;
                 return arg + arg2;
@@ -388,17 +438,18 @@ public class CallbacksTest extends TestCase implements Paths {
         final long EXPECTED = MAGIC*3;
         long value = lib.callInt64Callback(cb, MAGIC, MAGIC*2);
         assertTrue("Callback not called", called[0]);
-        assertEquals("Wrong callback value", Long.toHexString(EXPECTED), 
+        assertEquals("Wrong callback value", Long.toHexString(EXPECTED),
                      Long.toHexString(value));
-        
+
         value = lib.callInt64Callback(cb, -1, -2);
         assertEquals("Wrong callback return", -3, value);
     }
-    
+
     public void testCallFloatCallback() {
         final boolean[] called = { false };
         final float[] args = { 0, 0 };
         TestLibrary.FloatCallback cb = new TestLibrary.FloatCallback() {
+            @Override
             public float callback(float arg, float arg2) {
                 called[0] = true;
                 args[0] = arg;
@@ -412,15 +463,16 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Wrong first argument", FLOAT_MAGIC, args[0], 0);
         assertEquals("Wrong second argument", FLOAT_MAGIC*2, args[1], 0);
         assertEquals("Wrong callback value", EXPECTED, value, 0);
-        
+
         value = lib.callFloatCallback(cb, -1f, -2f);
         assertEquals("Wrong callback return", -3f, value, 0);
     }
-    
+
     public void testCallDoubleCallback() {
         final boolean[] called = { false };
         final double[] args = { 0, 0 };
         TestLibrary.DoubleCallback cb = new TestLibrary.DoubleCallback() {
+            @Override
             public double callback(double arg, double arg2) {
                 called[0] = true;
                 args[0] = arg;
@@ -433,18 +485,19 @@ public class CallbacksTest extends TestCase implements Paths {
         assertTrue("Callback not called", called[0]);
         assertEquals("Wrong first argument", DOUBLE_MAGIC, args[0], 0);
         assertEquals("Wrong second argument", DOUBLE_MAGIC*2, args[1], 0);
-        assertEquals("Wrong callback value", EXPECTED, value, 0); 
-        
+        assertEquals("Wrong callback value", EXPECTED, value, 0);
+
         value = lib.callDoubleCallback(cb, -1d, -2d);
         assertEquals("Wrong callback return", -3d, value, 0);
     }
-    
+
     public void testCallStructureCallback() {
         final boolean[] called = {false};
         final Pointer[] cbarg = { null };
         final SmallTestStructure s = new SmallTestStructure();
         final double MAGIC = 118.625;
         TestLibrary.StructureCallback cb = new TestLibrary.StructureCallback() {
+            @Override
             public SmallTestStructure callback(SmallTestStructure arg) {
                 called[0] = true;
                 cbarg[0] = arg.getPointer();
@@ -462,15 +515,16 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Structure return not synched",
                      MAGIC, value.value, 0d);
         // All structures involved should be created from pointers, with no
-        // memory allocation at all.  
+        // memory allocation at all.
         assertEquals("No structure memory should be allocated", 0, SmallTestStructure.allocations);
     }
-    
+
     public void testCallStructureArrayCallback() {
         final SmallTestStructure s = new SmallTestStructure();
         final SmallTestStructure[] array = (SmallTestStructure[])s.toArray(2);
         final double MAGIC = 118.625;
         TestLibrary.StructureCallback cb = new TestLibrary.StructureCallback() {
+            @Override
             public SmallTestStructure callback(SmallTestStructure arg) {
                 SmallTestStructure[] array =
                     (SmallTestStructure[])arg.toArray(2);
@@ -485,11 +539,12 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Structure array element 1 not synched on callback return",
                      MAGIC*2, array[1].value, 0d);
     }
-    
+
     public void testCallBooleanCallback() {
         final boolean[] called = {false};
         final boolean[] cbargs = { false, false };
         TestLibrary.BooleanCallback cb = new TestLibrary.BooleanCallback() {
+            @Override
             public boolean callback(boolean arg, boolean arg2) {
                 called[0] = true;
                 cbargs[0] = arg;
@@ -499,15 +554,16 @@ public class CallbacksTest extends TestCase implements Paths {
         };
         boolean value = lib.callBooleanCallback(cb, true, false);
         assertTrue("Callback not called", called[0]);
-        assertEquals("Wrong callback argument 1", true, cbargs[0]);
-        assertEquals("Wrong callback argument 2", false, cbargs[1]);
+        assertEquals("Wrong first callback argument", true, cbargs[0]);
+        assertEquals("Wrong second callback argument", false, cbargs[1]);
         assertFalse("Wrong boolean return", value);
     }
-    
+
     public void testCallInt8Callback() {
         final boolean[] called = {false};
         final byte[] cbargs = { 0, 0 };
         TestLibrary.ByteCallback cb = new TestLibrary.ByteCallback() {
+            @Override
             public byte callback(byte arg, byte arg2) {
                 called[0] = true;
                 cbargs[0] = arg;
@@ -515,27 +571,28 @@ public class CallbacksTest extends TestCase implements Paths {
                 return (byte)(arg + arg2);
             }
         };
-        final byte MAGIC = 0x11; 
+        final byte MAGIC = 0x11;
         byte value = lib.callInt8Callback(cb, MAGIC, (byte)(MAGIC*2));
         assertTrue("Callback not called", called[0]);
-        assertEquals("Wrong callback argument 1", 
-                     Integer.toHexString(MAGIC), 
+        assertEquals("Wrong first callback argument",
+                     Integer.toHexString(MAGIC),
                      Integer.toHexString(cbargs[0]));
-        assertEquals("Wrong callback argument 2", 
-                     Integer.toHexString(MAGIC*2), 
+        assertEquals("Wrong second callback argument",
+                     Integer.toHexString(MAGIC*2),
                      Integer.toHexString(cbargs[1]));
-        assertEquals("Wrong byte return", 
-                     Integer.toHexString(MAGIC*3), 
+        assertEquals("Wrong byte return",
+                     Integer.toHexString(MAGIC*3),
                      Integer.toHexString(value));
-        
+
         value = lib.callInt8Callback(cb, (byte)-1, (byte)-2);
         assertEquals("Wrong byte return (hi bit)", (byte)-3, value);
     }
-    
+
     public void testCallInt16Callback() {
         final boolean[] called = {false};
         final short[] cbargs = { 0, 0 };
         TestLibrary.ShortCallback cb = new TestLibrary.ShortCallback() {
+            @Override
             public short callback(short arg, short arg2) {
                 called[0] = true;
                 cbargs[0] = arg;
@@ -546,24 +603,25 @@ public class CallbacksTest extends TestCase implements Paths {
         final short MAGIC = 0x1111;
         short value = lib.callInt16Callback(cb, MAGIC, (short)(MAGIC*2));
         assertTrue("Callback not called", called[0]);
-        assertEquals("Wrong callback argument 1", 
-                     Integer.toHexString(MAGIC), 
+        assertEquals("Wrong first callback argument",
+                     Integer.toHexString(MAGIC),
                      Integer.toHexString(cbargs[0]));
-        assertEquals("Wrong callback argument 2", 
-                     Integer.toHexString(MAGIC*2), 
+        assertEquals("Wrong second callback argument",
+                     Integer.toHexString(MAGIC*2),
                      Integer.toHexString(cbargs[1]));
-        assertEquals("Wrong short return", 
-                     Integer.toHexString(MAGIC*3), 
+        assertEquals("Wrong short return",
+                     Integer.toHexString(MAGIC*3),
                      Integer.toHexString(value));
 
         value = lib.callInt16Callback(cb, (short)-1, (short)-2);
         assertEquals("Wrong short return (hi bit)", (short)-3, value);
     }
-    
+
     public void testCallNativeLongCallback() {
         final boolean[] called = {false};
         final NativeLong[] cbargs = { null, null};
         TestLibrary.NativeLongCallback cb = new TestLibrary.NativeLongCallback() {
+            @Override
             public NativeLong callback(NativeLong arg, NativeLong arg2) {
                 called[0] = true;
                 cbargs[0] = arg;
@@ -573,15 +631,16 @@ public class CallbacksTest extends TestCase implements Paths {
         };
         NativeLong value = lib.callNativeLongCallback(cb, new NativeLong(1), new NativeLong(2));
         assertTrue("Callback not called", called[0]);
-        assertEquals("Wrong callback argument 1", new NativeLong(1), cbargs[0]);
-        assertEquals("Wrong callback argument 2", new NativeLong(2), cbargs[1]);
+        assertEquals("Wrong first callback argument", new NativeLong(1), cbargs[0]);
+        assertEquals("Wrong second callback argument", new NativeLong(2), cbargs[1]);
         assertEquals("Wrong boolean return", new NativeLong(3), value);
     }
-    
+
     public void testCallNativeMappedCallback() {
         final boolean[] called = {false};
         final Custom[] cbargs = { null, null};
         TestLibrary.CustomCallback cb = new TestLibrary.CustomCallback() {
+            @Override
             public Custom callback(Custom arg, Custom arg2) {
                 called[0] = true;
                 cbargs[0] = arg;
@@ -591,43 +650,51 @@ public class CallbacksTest extends TestCase implements Paths {
         };
         int value = lib.callInt32Callback(cb, 1, 2);
         assertTrue("Callback not called", called[0]);
-        assertEquals("Wrong callback argument 1", new Custom(1), cbargs[0]);
-        assertEquals("Wrong callback argument 2", new Custom(2), cbargs[1]);
+        assertEquals("Wrong first callback argument", new Custom(1), cbargs[0]);
+        assertEquals("Wrong second callback argument", new Custom(2), cbargs[1]);
         assertEquals("Wrong NativeMapped return", 3, value);
     }
-    
+
     public void testCallStringCallback() {
         final boolean[] called = {false};
-        final String[] cbargs = { null };
+        final String[] cbargs = { null, null };
         TestLibrary.StringCallback cb = new TestLibrary.StringCallback() {
-            public String callback(String arg) {
+            @Override
+            public String callback(String arg, String arg2) {
                 called[0] = true;
                 cbargs[0] = arg;
-                return arg;
+                cbargs[1] = arg2;
+                return arg + arg2;
             }
         };
-        final String VALUE = "value" + UNICODE;
-        String value = lib.callStringCallback(cb, VALUE);
+        Charset charset = Charset.forName(Native.getDefaultStringEncoding());
+        final String VALUE = "value" + charset.decode(charset.encode(UNICODE));
+        final String VALUE2 = getName() + charset.decode(charset.encode(UNICODE));
+        String value = lib.callStringCallback(cb, VALUE, VALUE2);
         assertTrue("Callback not called", called[0]);
-        assertEquals("Wrong String callback argument", VALUE, cbargs[0]);
-        assertEquals("Wrong String return", VALUE, value);
+        assertEquals("Wrong String callback argument 0", VALUE, cbargs[0]);
+        assertEquals("Wrong String callback argument 1", VALUE2, cbargs[1]);
+        assertEquals("Wrong String return", VALUE + VALUE2, value);
     }
-    
+
     public void testStringCallbackMemoryReclamation() throws InterruptedException {
         TestLibrary.StringCallback cb = new TestLibrary.StringCallback() {
-            public String callback(String arg) {
-                return arg;
+            @Override
+            public String callback(String arg, String arg2) {
+                return arg + arg2;
             }
         };
 
         // A little internal groping
-        Map m = CallbackReference.allocations;
+        Map<?, ?> m = CallbackReference.allocations;
         m.clear();
 
-        String arg = getName() + "1" + UNICODE;
-        String value = lib.callStringCallback(cb, arg);
-        WeakReference ref = new WeakReference(value);
-        
+        Charset charset = Charset.forName(Native.getDefaultStringEncoding());
+        String arg = getName() + "1" + charset.decode(charset.encode(UNICODE));
+        String arg2 = getName() + "2" + charset.decode(charset.encode(UNICODE));
+        String value = lib.callStringCallback(cb, arg, arg2);
+        WeakReference<Object> ref = new WeakReference<Object>(value);
+
         arg = null;
         value = null;
         System.gc();
@@ -643,32 +710,38 @@ public class CallbacksTest extends TestCase implements Paths {
 
     public void testCallWideStringCallback() {
         final boolean[] called = {false};
-        final WString[] cbargs = { null };
+        final WString[] cbargs = { null, null };
         TestLibrary.WideStringCallback cb = new TestLibrary.WideStringCallback() {
-            public WString callback(WString arg) {
+            @Override
+            public WString callback(WString arg, WString arg2) {
                 called[0] = true;
                 cbargs[0] = arg;
-                return arg;
+                cbargs[1] = arg2;
+                return new WString(arg.toString() + arg2.toString());
             }
         };
-        final WString VALUE = new WString("value" + UNICODE);
-        WString value = lib.callWideStringCallback(cb, VALUE);
+        final WString VALUE = new WString("magic" + UNICODE);
+        final WString VALUE2 = new WString(getName() + UNICODE);
+        WString value = lib.callWideStringCallback(cb, VALUE, VALUE2);
         assertTrue("Callback not called", called[0]);
-        assertEquals("Wrong callback argument 1", VALUE, cbargs[0]);
-        assertEquals("Wrong wide string return", VALUE, value);
+        assertEquals("Wrong first callback argument", VALUE, cbargs[0]);
+        assertEquals("Wrong second callback argument", VALUE2, cbargs[1]);
+        assertEquals("Wrong wide string return", new WString(VALUE.toString() + VALUE2.toString()), value);
     }
-    
+
     public void testCallStringArrayCallback() {
         final boolean[] called = {false};
         final String[][] cbargs = { null };
         TestLibrary.StringArrayCallback cb = new TestLibrary.StringArrayCallback() {
+            @Override
             public String[] callback(String[] arg) {
                 called[0] = true;
                 cbargs[0] = arg;
                 return arg;
             }
         };
-        final String VALUE = "value" + UNICODE;
+        Charset charset = Charset.forName(Native.getDefaultStringEncoding());
+        final String VALUE = "value" + charset.decode(charset.encode(UNICODE));
         final String[] VALUE_ARRAY = { VALUE, null };
         Pointer value = lib.callStringArrayCallback(cb, VALUE_ARRAY);
         assertTrue("Callback not called", called[0]);
@@ -683,10 +756,11 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Terminating null should be removed from return value",
                      VALUE_ARRAY.length-1, result.length);
     }
-    
+
     public void testCallCallbackWithByReferenceArgument() {
-    	final boolean[] called = {false};
+        final boolean[] called = {false};
         TestLibrary.CopyArgToByReference cb = new TestLibrary.CopyArgToByReference() {
+            @Override
             public int callback(int arg, IntByReference result) {
                 called[0] = true;
                 result.setValue(arg);
@@ -699,12 +773,13 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Wrong value returned", VALUE, value);
         assertEquals("Wrong value in by reference memory", VALUE, ref.getValue());
     }
-    
-    public void testCallCallbackWithStructByValue() {
+
+    public void testCallCallbackWithStructByValue() throws Exception {
         final boolean[] called = { false };
         final TestStructure.ByValue[] arg = { null };
         final TestStructure.ByValue s = new TestStructure.ByValue();
         TestStructure.TestCallback cb = new TestStructure.TestCallback() {
+            @Override
             public TestStructure.ByValue callback(TestStructure.ByValue s) {
                 // Copy the argument value for later comparison
                 called[0] = true;
@@ -716,25 +791,35 @@ public class CallbacksTest extends TestCase implements Paths {
         s.i = 0x33333333;
         s.j = 0x4444444444444444L;
         s.inner.value = 5;
-        
+
         TestStructure result = lib.callCallbackWithStructByValue(cb, s);
         assertTrue("Callback not called", called[0]);
         assertTrue("ByValue argument should own its own memory, instead was "
                    + arg[0].getPointer(), arg[0].getPointer() instanceof Memory);
         assertTrue("ByValue result should own its own memory, instead was "
                    + result.getPointer(), result.getPointer() instanceof Memory);
-        assertEquals("Wrong value for callback argument", s, arg[0]);
-        assertEquals("Wrong value for callback result", s, result);
+        if (!s.dataEquals(arg[0], true)) {
+            System.out.println("Mismatch: " + s);
+            System.out.println("  versus: " + arg[0]);
+        }
+        assertTrue("Wrong value for callback argument", s.dataEquals(arg[0], true));
+        if (!s.dataEquals(result, true)) {
+            System.out.println("Mismatch: " + s);
+            System.out.println("  versus: " + result);
+        }
+        assertTrue("Wrong value for callback result", s.dataEquals(result, true));
     }
-    
-    public void testUnionByValueCallbackArgument() throws Exception{ 
+
+    public void testUnionByValueCallbackArgument() throws Exception{
         TestLibrary.TestUnion arg = new TestLibrary.TestUnion();
         arg.setType(String.class);
-        final String VALUE = getName() + UNICODE;
+        Charset charset = Charset.forName(arg.getStringEncoding());
+        final String VALUE = getName() + charset.decode(charset.encode(UNICODE));
         arg.f1 = VALUE;
         final boolean[] called = { false };
         final TestLibrary.TestUnion[] cbvalue = { null };
         TestLibrary.TestUnion result = lib.testUnionByValueCallbackArgument(new TestLibrary.UnionCallback() {
+            @Override
             public TestLibrary.TestUnion invoke(TestLibrary.TestUnion v) {
                 called[0] = true;
                 v.setType(String.class);
@@ -753,6 +838,7 @@ public class CallbacksTest extends TestCase implements Paths {
 
     public void testCallCallbackWithCallbackArgumentAndResult() {
         TestLibrary.CbCallback cb = new TestLibrary.CbCallback() {
+            @Override
             public CbCallback callback(CbCallback arg) {
                 return arg;
             }
@@ -760,7 +846,7 @@ public class CallbacksTest extends TestCase implements Paths {
         TestLibrary.CbCallback cb2 = lib.callCallbackWithCallback(cb);
         assertEquals("Callback reference should be reused", cb, cb2);
     }
-    
+
     public void testDefaultCallbackExceptionHandler() {
         final RuntimeException ERROR = new RuntimeException(getName());
         PrintStream ps = System.err;
@@ -768,6 +854,7 @@ public class CallbacksTest extends TestCase implements Paths {
         System.setErr(new PrintStream(s));
         try {
             TestLibrary.CbCallback cb = new TestLibrary.CbCallback() {
+                @Override
                 public CbCallback callback(CbCallback arg) {
                     throw ERROR;
                 }
@@ -789,6 +876,7 @@ public class CallbacksTest extends TestCase implements Paths {
         final Callback CALLBACK[] = { null };
         UncaughtExceptionHandler old = Native.getCallbackExceptionHandler();
         UncaughtExceptionHandler handler = new UncaughtExceptionHandler() {
+            @Override
             public void uncaughtException(Callback cb, Throwable e) {
                 CALLBACK[0] = cb;
                 CAUGHT[0] = e;
@@ -797,6 +885,7 @@ public class CallbacksTest extends TestCase implements Paths {
         Native.setCallbackExceptionHandler(handler);
         try {
             TestLibrary.CbCallback cb = new TestLibrary.CbCallback() {
+                @Override
                 public CbCallback callback(CbCallback arg) {
                     throw ERROR;
                 }
@@ -819,6 +908,7 @@ public class CallbacksTest extends TestCase implements Paths {
         final Callback CALLBACK[] = { null };
         UncaughtExceptionHandler old = Native.getCallbackExceptionHandler();
         UncaughtExceptionHandler handler = new UncaughtExceptionHandler() {
+            @Override
             public void uncaughtException(Callback cb, Throwable e) {
                 CALLBACK[0] = cb;
                 CAUGHT[0] = e;
@@ -827,16 +917,20 @@ public class CallbacksTest extends TestCase implements Paths {
         Native.setCallbackExceptionHandler(handler);
         try {
             class TestProxy implements CallbackProxy, TestLibrary.CbCallback {
+                @Override
                 public CbCallback callback(CbCallback arg) {
                     throw new Error("Should never be called");
                 }
+                @Override
                 public Object callback(Object[] args) {
                     throw ERROR;
                 }
-                public Class[] getParameterTypes() {
+                @Override
+                public Class<?>[] getParameterTypes() {
                     return new Class[] { CbCallback.class };
                 }
-                public Class getReturnType() {
+                @Override
+                public Class<?> getReturnType() {
                     return CbCallback.class;
                 }
             };
@@ -862,8 +956,9 @@ public class CallbacksTest extends TestCase implements Paths {
         TestLibrary.Int32CallbackX cb = lib.returnCallback();
         assertNotNull("Callback should not be null", cb);
         assertEquals("Callback should be callable", 1, cb.callback(1));
-        
+
         TestLibrary.Int32CallbackX cb2 = new TestLibrary.Int32CallbackX() {
+            @Override
             public int callback(int arg) {
                 return 0;
             }
@@ -873,7 +968,7 @@ public class CallbacksTest extends TestCase implements Paths {
         assertSame("Existing native function wrapper should be reused",
                    cb, lib.returnCallbackArgument(cb));
     }
-    
+
     public void testCallCallbackInStructure() {
         final boolean[] flag = {false};
         final TestLibrary.CbStruct s = new TestLibrary.CbStruct();
@@ -887,11 +982,13 @@ public class CallbacksTest extends TestCase implements Paths {
     }
 
     public void testCustomCallbackMethodName() {
-    	final boolean[] called = {false};
+        final boolean[] called = {false};
         TestLibrary.VoidCallbackCustom cb = new TestLibrary.VoidCallbackCustom() {
+            @Override
             public void customMethodName() {
                 called[0] = true;
             }
+            @Override
             public String toString() {
                 return "Some debug output";
             }
@@ -901,9 +998,10 @@ public class CallbacksTest extends TestCase implements Paths {
     }
 
     public void testDisallowDetachFromJVMThread() {
-    	final boolean[] called = {false};
+        final boolean[] called = {false};
         final boolean[] exceptionThrown = {true};
         TestLibrary.VoidCallback cb = new TestLibrary.VoidCallback() {
+            @Override
             public void callback() {
                 called[0] = true;
                 try {
@@ -919,47 +1017,85 @@ public class CallbacksTest extends TestCase implements Paths {
     }
 
     public void testCustomCallbackVariedInheritance() {
-    	final boolean[] called = {false};
+        final boolean[] called = {false};
         TestLibrary.VoidCallbackCustom cb =
             new TestLibrary.VoidCallbackCustomDerived();
         lib.callVoidCallback(cb);
     }
 
+    protected static class CallbackTypeMapper extends DefaultTypeMapper {
+        public int fromNativeConversions = 0;
+        public int toNativeConversions = 0;
+        public void clear() {
+            fromNativeConversions = 0;
+            toNativeConversions = 0;
+        }
+        {
+            // Convert java doubles into native integers and back
+            TypeConverter converter = new TypeConverter() {
+                @Override
+                public Object fromNative(Object value, FromNativeContext context) {
+                    ++fromNativeConversions;
+                    return Double.valueOf(((Integer)value).intValue());
+                }
+                @Override
+                public Class<?> nativeType() {
+                    return Integer.class;
+                }
+                @Override
+                public Object toNative(Object value, ToNativeContext ctx) {
+                    ++toNativeConversions;
+                    return Integer.valueOf(((Double)value).intValue());
+                }
+            };
+            addTypeConverter(double.class, converter);
+            converter = new TypeConverter() {
+                @Override
+                public Object fromNative(Object value, FromNativeContext context) {
+                    ++fromNativeConversions;
+                    return Float.valueOf(((Long)value).intValue());
+                }
+                @Override
+                public Class<?> nativeType() {
+                    return Long.class;
+                }
+                @Override
+                public Object toNative(Object value, ToNativeContext ctx) {
+                    ++toNativeConversions;
+                    return Long.valueOf(((Float)value).longValue());
+                }
+            };
+            addTypeConverter(float.class, converter);
+            converter = new TypeConverter() {
+                @Override
+                public Object fromNative(Object value, FromNativeContext context) {
+                    ++fromNativeConversions;
+                    if (value == null) {
+                        return null;
+                    }
+                    if (value instanceof Pointer) {
+                        return ((Pointer)value).getWideString(0);
+                    }
+                    return value.toString();
+                }
+                @Override
+                public Class<?> nativeType() {
+                    return WString.class;
+                }
+                @Override
+                public Object toNative(Object value, ToNativeContext ctx) {
+                    ++toNativeConversions;
+                    return new WString(value.toString());
+                }
+            };
+            addTypeConverter(String.class, converter);
+        }
+    }
+
     public static interface CallbackTestLibrary extends Library {
-        final TypeMapper _MAPPER = new DefaultTypeMapper() {
-            {
-                // Convert java doubles into native integers and back
-                TypeConverter converter = new TypeConverter() {
-                    public Object fromNative(Object value, FromNativeContext context) {
-                        return new Double(((Integer)value).intValue());
-                    }
-                    public Class nativeType() {
-                        return Integer.class;
-                    }
-                    public Object toNative(Object value, ToNativeContext ctx) {
-                        return new Integer(((Double)value).intValue());
-                    }
-                };
-                addTypeConverter(double.class, converter);
-                converter = new TypeConverter() {
-                    public Object fromNative(Object value, FromNativeContext context) {
-                        return new Float(((Long)value).intValue());
-                    }
-                    public Class nativeType() {
-                        return Long.class;
-                    }
-                    public Object toNative(Object value, ToNativeContext ctx) {
-                        return new Long(((Float)value).longValue());
-                    }
-                };
-                addTypeConverter(float.class, converter);
-            }
-        };
-        final Map _OPTIONS = new HashMap() {
-            {
-                put(Library.OPTION_TYPE_MAPPER, _MAPPER);
-            }
-        };
+        final CallbackTypeMapper _MAPPER = new CallbackTypeMapper();
+        final Map<String, ?> _OPTIONS = Collections.singletonMap(Library.OPTION_TYPE_MAPPER, _MAPPER);
+
         interface DoubleCallback extends Callback {
             double callback(double arg, double arg2);
         }
@@ -968,39 +1104,80 @@ public class CallbacksTest extends TestCase implements Paths {
             float callback(float arg, float arg2);
         }
         float callInt64Callback(FloatCallback c, float arg, float arg2);
+        interface WStringCallback extends Callback {
+            String callback(String arg, String arg2);
+        }
+        String callWideStringCallback(WStringCallback c, String arg, String arg2);
     }
 
     protected CallbackTestLibrary loadCallbackTestLibrary() {
-        return (CallbackTestLibrary)
-            Native.loadLibrary("testlib", CallbackTestLibrary.class, CallbackTestLibrary._OPTIONS);
+        return Native.load("testlib", CallbackTestLibrary.class, CallbackTestLibrary._OPTIONS);
     }
 
     /** This test is here instead of NativeTest in order to facilitate running
         the exact same test on a direct-mapped library without the tests
         interfering with one another due to persistent/cached state in library
-        loading. 
+        loading.
     */
     public void testCallbackUsesTypeMapper() throws Exception {
         CallbackTestLibrary lib = loadCallbackTestLibrary();
+        CallbackTestLibrary._MAPPER.clear();
 
         final double[] ARGS = new double[2];
 
         CallbackTestLibrary.DoubleCallback cb = new CallbackTestLibrary.DoubleCallback() {
+            @Override
             public double callback(double arg, double arg2) {
                 ARGS[0] = arg;
                 ARGS[1] = arg2;
                 return arg + arg2;
             }
         };
-        assertEquals("Wrong type mapper for callback class", lib._MAPPER,
+        assertEquals("Wrong type mapper for callback class", CallbackTestLibrary._MAPPER,
                      Native.getTypeMapper(CallbackTestLibrary.DoubleCallback.class));
-        assertEquals("Wrong type mapper for callback object", lib._MAPPER,
+        assertEquals("Wrong type mapper for callback object", CallbackTestLibrary._MAPPER,
                      Native.getTypeMapper(cb.getClass()));
 
-        double result = lib.callInt32Callback(cb, -1, -1);
-        assertEquals("Wrong callback argument 1", -1, ARGS[0], 0);
-        assertEquals("Wrong callback argument 2", -1, ARGS[1], 0);
-        assertEquals("Incorrect result of callback invocation", -2, result, 0);
+        double result = lib.callInt32Callback(cb, -1, -2);
+        assertEquals("Wrong first callback argument", -1, ARGS[0], 0);
+        assertEquals("Wrong second callback argument", -2, ARGS[1], 0);
+        assertEquals("Incorrect result of callback invocation", -3, result, 0);
+
+        // Once per argument, then again for return value (convert native int->Java double)
+        assertEquals("Type mapper not called for arguments", 3, CallbackTestLibrary._MAPPER.fromNativeConversions);
+        // Once per argument, then again for return value (convert Java double->native int)
+        assertEquals("Type mapper not called for result", 3, CallbackTestLibrary._MAPPER.toNativeConversions);
+    }
+
+    public void testTypeMapperWithWideStrings() throws Exception {
+        CallbackTestLibrary lib = loadCallbackTestLibrary();
+        CallbackTestLibrary._MAPPER.clear();
+
+        final String[] ARGS = new String[2];
+
+        CallbackTestLibrary.WStringCallback cb = new CallbackTestLibrary.WStringCallback() {
+            @Override
+            public String callback(String arg, String arg2) {
+                ARGS[0] = arg;
+                ARGS[1] = arg2;
+                return arg + arg2;
+            }
+        };
+        assertEquals("Wrong type mapper for callback class", CallbackTestLibrary._MAPPER,
+                     Native.getTypeMapper(CallbackTestLibrary.WStringCallback.class));
+        assertEquals("Wrong type mapper for callback object", CallbackTestLibrary._MAPPER,
+                     Native.getTypeMapper(cb.getClass()));
+
+        final String[] EXPECTED = { "magic" + UNICODE, getName() + UNICODE };
+        String result = lib.callWideStringCallback(cb, EXPECTED[0], EXPECTED[1]);
+        assertEquals("Wrong first callback argument", EXPECTED[0], ARGS[0]);
+        assertEquals("Wrong second callback argument", EXPECTED[1], ARGS[1]);
+        assertEquals("Incorrect result of callback invocation", EXPECTED[0] + EXPECTED[1], result);
+
+        // Once per argument, then again for return value (convert const wchar_t*->Java String)
+        assertEquals("Type mapper not called for arguments", 3, CallbackTestLibrary._MAPPER.fromNativeConversions);
+        // Once per argument, then again for return value (convert Java String->const wchar_t*)
+        assertEquals("Type mapper not called for result", 3, CallbackTestLibrary._MAPPER.toNativeConversions);
     }
 
     public void testCallbackUsesTypeMapperWithDifferentReturnTypeSize() throws Exception {
@@ -1009,28 +1186,29 @@ public class CallbacksTest extends TestCase implements Paths {
         final float[] ARGS = new float[2];
 
         CallbackTestLibrary.FloatCallback cb = new CallbackTestLibrary.FloatCallback() {
+            @Override
             public float callback(float arg, float arg2) {
                 ARGS[0] = arg;
                 ARGS[1] = arg2;
                 return arg + arg2;
             }
         };
-        assertEquals("Wrong type mapper for callback class", lib._MAPPER,
+        assertEquals("Wrong type mapper for callback class", CallbackTestLibrary._MAPPER,
                      Native.getTypeMapper(CallbackTestLibrary.FloatCallback.class));
-        assertEquals("Wrong type mapper for callback object", lib._MAPPER,
+        assertEquals("Wrong type mapper for callback object", CallbackTestLibrary._MAPPER,
                      Native.getTypeMapper(cb.getClass()));
 
-        float result = lib.callInt64Callback(cb, -1, -1);
-        assertEquals("Wrong callback argument 1", -1, ARGS[0], 0);
-        assertEquals("Wrong callback argument 2", -1, ARGS[1], 0);
-        assertEquals("Incorrect result of callback invocation", -2, result, 0);
+        float result = lib.callInt64Callback(cb, -1, -2);
+        assertEquals("Wrong first callback argument", -1, ARGS[0], 0);
+        assertEquals("Wrong second callback argument", -2, ARGS[1], 0);
+        assertEquals("Incorrect result of callback invocation", -3, result, 0);
     }
 
     protected void callThreadedCallback(TestLibrary.VoidCallback cb,
                                         CallbackThreadInitializer cti,
                                         int repeat, int sleepms,
                                         int[] called) throws Exception {
-	callThreadedCallback(cb, cti, repeat, sleepms, called, repeat);
+        callThreadedCallback(cb, cti, repeat, sleepms, called, repeat);
     }
 
     protected void callThreadedCallback(TestLibrary.VoidCallback cb,
@@ -1040,7 +1218,7 @@ public class CallbacksTest extends TestCase implements Paths {
         if (cti != null) {
             Native.setCallbackThreadInitializer(cb, cti);
         }
-        lib.callVoidCallbackThreaded(cb, repeat, sleepms, getName());
+        lib.callVoidCallbackThreaded(cb, repeat, sleepms, getName(), 0);
 
         long start = System.currentTimeMillis();
         while (called[0] < returnAfter) {
@@ -1052,14 +1230,15 @@ public class CallbacksTest extends TestCase implements Paths {
     }
 
     public void testCallbackThreadDefaults() throws Exception {
-    	final int[] called = {0};
-    	final boolean[] daemon = {false};
+        final int[] called = {0};
+        final boolean[] daemon = {false};
         final String[] name = { null };
         final ThreadGroup[] group = { null };
         final Thread[] t = { null };
 
         ThreadGroup testGroup = new ThreadGroup(getName() + UNICODE);
         TestLibrary.VoidCallback cb = new TestLibrary.VoidCallback() {
+            @Override
             public void callback() {
                 Thread thread = Thread.currentThread();
                 daemon[0] = thread.isDaemon();
@@ -1076,8 +1255,8 @@ public class CallbacksTest extends TestCase implements Paths {
     }
 
     public void testCustomizeCallbackThread() throws Exception {
-    	final int[] called = {0};
-    	final boolean[] daemon = {false};
+        final int[] called = {0};
+        final boolean[] daemon = {false};
         final String[] name = { null };
         final ThreadGroup[] group = { null };
         final Thread[] t = { null };
@@ -1088,6 +1267,7 @@ public class CallbacksTest extends TestCase implements Paths {
         ThreadGroup testGroup = new ThreadGroup("Thread group for " + getName());
         CallbackThreadInitializer init = new CallbackThreadInitializer(true, false, tname, testGroup);
         TestLibrary.VoidCallback cb = new TestLibrary.VoidCallback() {
+            @Override
             public void callback() {
                 Thread thread = Thread.currentThread();
                 daemon[0] = thread.isDaemon();
@@ -1099,8 +1279,8 @@ public class CallbacksTest extends TestCase implements Paths {
                     alive[0] = true;
                 }
 
-                if (++called[0] == 2) {
-                    // Allow the thread to exit
+                ++called[0];
+                if (THREAD_DETACH_BUG && called[0] == 2) {
                     Native.detach(true);
                 }
             }
@@ -1117,80 +1297,105 @@ public class CallbacksTest extends TestCase implements Paths {
         assertTrue("Thread should still be alive", t[0].isAlive());
 
         long start = System.currentTimeMillis();
-	while (called[0] < 2) {
-	    Thread.sleep(10);
-	    if (System.currentTimeMillis() - start > THREAD_TIMEOUT) {
-		fail("Timed out waiting for second callback invocation, which indicates detach");
-	    }
-	}
+        while (called[0] < 2) {
+            Thread.sleep(10);
+            if (System.currentTimeMillis() - start > THREAD_TIMEOUT) {
+                fail("Timed out waiting for second callback invocation, which indicates detach");
+            }
+        }
 
-        start = System.currentTimeMillis();
-	while (t[0].isAlive()) {
-	    Thread.sleep(10);
-	    if (System.currentTimeMillis() - start > THREAD_TIMEOUT) {
-		fail("Timed out waiting for thread to detach and terminate");
-	    }
-	}
+        waitFor(t[0]);
+    }
+
+    public void testSmallStackCallback() throws Exception {
+        // This test runs the callback in a thread, that is allocated a very
+        // small size. It was observed on linux amd64, that a library allocated
+        // a stack size of 64kB, this prevented the JVM to attach to that
+        // thread. The JNIEnv pointer was not checked and this lead to a
+        // hard crash of the JVM.
+        TestLibrary.VoidCallback cb = new TestLibrary.VoidCallback() {
+            @Override
+            public void callback() {
+                System.out.println("Callback called");
+            }
+        };
+
+        lib.callVoidCallbackThreaded(cb, 1, 0, "Test Callback", 64 * 1024);
+
+        // Give the JVM enough time to run the call back
+        Thread.sleep(1 * 1000);
     }
 
     // Detach preference is indicated by the initializer.  Thread is attached
-    // as daemon to allow VM to reclaim it.
+    // as daemon to avoid VM having to wait for it.
     public void testCallbackThreadPersistence() throws Exception {
-    	final int[] called = {0};
-        final Set threads = new HashSet();
+        final int[] called = {0};
+        final Set<Thread> threads = new HashSet<Thread>();
 
         final int COUNT = 5;
         CallbackThreadInitializer init = new CallbackThreadInitializer(true, false) {
+            @Override
             public String getName(Callback cb) {
                 return "Test thread (native) for " + CallbacksTest.this.getName() + " (call count: " + called[0] + ")";
             }
         };
         TestLibrary.VoidCallback cb = new TestLibrary.VoidCallback() {
+            @Override
             public void callback() {
                 threads.add(Thread.currentThread());
                 ++called[0];
+                if (THREAD_DETACH_BUG && called[0] == COUNT) {
+                    Native.detach(true);
+                }
             }
         };
         callThreadedCallback(cb, init, COUNT, 100, called);
 
         assertEquals("Multiple callbacks on a given native thread should use the same Thread mapping: " + threads,
                      1, threads.size());
+
+        waitFor(threads.iterator().next());
     }
 
     // Thread object is never GC'd on linux-amd64 and darwin-amd64 (w/openjdk7)
     public void testCleanupUndetachedThreadOnThreadExit() throws Exception {
-        final Set threads = new HashSet();
+        final Set<Reference<Thread>> threads = new HashSet<Reference<Thread>>();
         final int[] called = { 0 };
         TestLibrary.VoidCallback cb = new TestLibrary.VoidCallback() {
+            @Override
             public void callback() {
-                threads.add(new WeakReference(Thread.currentThread()));
+                threads.add(new WeakReference<Thread>(Thread.currentThread()));
                 if (++called[0] == 1) {
                     Thread.currentThread().setName(getName() + " (Thread to be cleaned up)");
                 }
-		Native.detach(false);
+                Native.detach(false);
             }
         };
-	// Always attach as daemon to ensure tests will exit
+        // Always attach as daemon to ensure tests will exit
         CallbackThreadInitializer asDaemon = new CallbackThreadInitializer(true) {
-	    public String getName(Callback cb) {
-		return "Test thread (native) for " + CallbacksTest.this.getName();
-	    }
-	};
+            @Override
+            public String getName(Callback cb) {
+                return "Test thread (native) for " + CallbacksTest.this.getName();
+            }
+        };
         callThreadedCallback(cb, asDaemon, 2, 100, called);
-	// Wait for it to start up
-        while (threads.size() == 0 && called[0] == 0) {
-            Thread.sleep(10);
-        }
+        // Wait for it to start up
         long start = System.currentTimeMillis();
-        WeakReference ref = (WeakReference)threads.iterator().next();
-
+        while (threads.size() == 0 && called[0] == 0) {
+            Thread.sleep(10L);
+            if (System.currentTimeMillis() - start > THREAD_TIMEOUT) {
+                fail("Timed out waiting for thread to detach and terminate");
+            }
+        }
+        start = System.currentTimeMillis();
+        Reference<Thread> ref = threads.iterator().next();
         while (ref.get() != null) {
             System.gc();
             Thread.sleep(100);
-	    Thread[] remaining = new Thread[Thread.activeCount()];
-	    Thread.enumerate(remaining);
+            Thread[] remaining = new Thread[Thread.activeCount()];
+            Thread.enumerate(remaining);
             if (System.currentTimeMillis() - start > THREAD_TIMEOUT) {
-                Thread t = (Thread)ref.get();
+                Thread t = ref.get();
                 Pointer terminationFlag = Native.getTerminationFlag(t);
                 assertNotNull("Native thread termination flag is missing", terminationFlag);
                 if (terminationFlag.getInt(0) == 0) {
@@ -1204,13 +1409,14 @@ public class CallbacksTest extends TestCase implements Paths {
     }
 
     // Callback indicates detach preference (instead of
-    // CallbackThreadInitializer); thread is non-daemon (default), 
+    // CallbackThreadInitializer); thread is non-daemon (default),
     // but callback explicitly detaches it on final invocation.
     public void testCallbackIndicatedThreadDetach() throws Exception {
-    	final int[] called = {0};
-        final Set threads = new HashSet();
+        final int[] called = {0};
+        final Set<Thread> threads = new HashSet<Thread>();
         final int COUNT = 5;
         TestLibrary.VoidCallback cb = new TestLibrary.VoidCallback() {
+            @Override
             public void callback() {
                 threads.add(Thread.currentThread());
                 // detach on final invocation
@@ -1229,16 +1435,8 @@ public class CallbacksTest extends TestCase implements Paths {
 
         assertEquals("Multiple callbacks in the same native thread should use the same Thread mapping: "
                      + threads, 1, threads.size());
-        Thread thread = (Thread)threads.iterator().next();
-        long start = System.currentTimeMillis();
 
-        while (thread.isAlive()) {
-            System.gc();
-            Thread.sleep(10);
-            if (System.currentTimeMillis() - start > THREAD_TIMEOUT) {
-                fail("Timed out waiting for native thread " + thread + " to finish");
-            }
-        }
+        waitFor(threads.iterator().next());
     }
 
     public void testDLLCallback() throws Exception {
@@ -1248,6 +1446,7 @@ public class CallbacksTest extends TestCase implements Paths {
 
         final boolean[] called = { false };
         class TestCallback implements TestLibrary.VoidCallback, com.sun.jna.win32.DLLCallback {
+            @Override
             public void callback() {
                 called[0] = true;
             }
@@ -1263,7 +1462,7 @@ public class CallbacksTest extends TestCase implements Paths {
         Function f = kernel32.getFunction("GetModuleHandleExW");
         final int GET_MODULE_HANDLE_FROM_ADDRESS = 0x4;
         PointerByReference pref = new PointerByReference();
-        int result = f.invokeInt(new Object[] { new Integer(GET_MODULE_HANDLE_FROM_ADDRESS), fp, pref });
+        int result = f.invokeInt(new Object[] { Integer.valueOf(GET_MODULE_HANDLE_FROM_ADDRESS), fp, pref });
         assertTrue("GetModuleHandleEx(fptr) failed: " + Native.getLastError(), result != 0);
 
         f = kernel32.getFunction("GetModuleFileNameW");
@@ -1277,13 +1476,13 @@ public class CallbacksTest extends TestCase implements Paths {
         assertEquals("Wrong module HANDLE for DLL function pointer", handle, pref.getValue());
 
         // Check slot re-use
-        Map refs = new WeakHashMap(callbackCache());
+        Map<Callback, CallbackReference> refs = new WeakHashMap<Callback, CallbackReference>(callbackCache());
         assertTrue("Callback not cached", refs.containsKey(cb));
-        CallbackReference ref = (CallbackReference)refs.get(cb);
+        CallbackReference ref = refs.get(cb);
         refs = callbackCache();
         Pointer cbstruct = ref.cbstruct;
         Pointer first_fptr = cbstruct.getPointer(0);
-        
+
         cb = null;
         System.gc();
         for (int i = 0; i < 100 && (ref.get() != null || refs.containsValue(ref)); ++i) {
@@ -1292,7 +1491,7 @@ public class CallbacksTest extends TestCase implements Paths {
         }
         assertNull("Callback not GC'd", ref.get());
         assertFalse("Callback still in map", refs.containsValue(ref));
-        
+
         ref = null;
         System.gc();
         for (int i = 0; i < 100 && (cbstruct.peer != 0 || refs.size() > 0); ++i) {
@@ -1308,7 +1507,7 @@ public class CallbacksTest extends TestCase implements Paths {
         cb = new TestCallback();
 
         lib.callVoidCallback(cb);
-        ref = (CallbackReference)refs.get(cb);
+        ref = refs.get(cb);
         cbstruct = ref.cbstruct;
 
         assertTrue("Callback not called", called[0]);
@@ -1323,6 +1522,7 @@ public class CallbacksTest extends TestCase implements Paths {
 
         final boolean[] called = { false };
         class TestCallback implements TestLibrary.VoidCallback, com.sun.jna.win32.DLLCallback {
+            @Override
             public void callback() {
                 called[0] = true;
             }
@@ -1336,6 +1536,54 @@ public class CallbacksTest extends TestCase implements Paths {
             fail("Expected out of memory error when all DLL callbacks used");
         }
         catch(OutOfMemoryError e) {
+        }
+    }
+
+    public interface TaggedCallingConventionTestLibrary extends Library, AltCallingConvention {
+        interface TestCallbackTagged extends Callback, AltCallingConvention {
+            void invoke();
+        }
+    }
+
+    public void testCallingConventionFromInterface() {
+        TaggedCallingConventionTestLibrary lib = Native.load("testlib", TaggedCallingConventionTestLibrary.class);
+        TaggedCallingConventionTestLibrary.TestCallbackTagged cb = new TaggedCallingConventionTestLibrary.TestCallbackTagged() {
+            @Override
+            public void invoke() { }
+        };
+        try {
+            Pointer p = CallbackReference.getFunctionPointer(cb);
+            CallbackReference ref = CallbackReference.callbackMap.get(cb);
+            assertNotNull("CallbackReference not found", ref);
+            assertEquals("Tag-based calling convention not applied", Function.ALT_CONVENTION, ref.callingConvention);
+        }
+        catch (IllegalArgumentException e) {
+            // Alt convention not supported
+        }
+    }
+
+    public interface OptionCallingConventionTestLibrary extends Library {
+        interface TestCallback extends Callback {
+            void invoke();
+        }
+    }
+
+    public void testCallingConventionFromOptions() {
+        OptionCallingConventionTestLibrary lib =
+                Native.load("testlib", OptionCallingConventionTestLibrary.class, Collections.singletonMap(Library.OPTION_CALLING_CONVENTION, Function.ALT_CONVENTION));
+        assertNotNull("Library not loaded", lib);
+        OptionCallingConventionTestLibrary.TestCallback cb = new OptionCallingConventionTestLibrary.TestCallback() {
+            @Override
+            public void invoke() { }
+        };
+        try {
+            Pointer p = CallbackReference.getFunctionPointer(cb);
+            assertNotNull("No function pointer", p);
+            CallbackReference ref = CallbackReference.callbackMap.get(cb);
+            assertNotNull("CallbackReference not found", ref);
+            assertEquals("Option-based calling convention not applied", Function.ALT_CONVENTION, ref.callingConvention);
+        } catch(IllegalArgumentException e) {
+            // Alt convention not supported
         }
     }
 
