@@ -1,15 +1,26 @@
 /* Copyright (c) 2007 Wayne Meissner, All Rights Reserved
  * Copyright (c) 2007-2013 Timothy Wall, All Rights Reserved
  *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version.
- * <p/>
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.  
+ * The contents of this file is dual-licensed under 2
+ * alternative Open Source/Free licenses: LGPL 2.1 or later and
+ * Apache License 2.0. (starting with JNA version 4.0.0).
+ *
+ * You can freely decide which license you want to apply to
+ * the project.
+ *
+ * You may obtain a copy of the LGPL License at:
+ *
+ * http://www.gnu.org/licenses/licenses.html
+ *
+ * A copy is also included in the downloadable source code package
+ * containing JNA, in file "LGPL2.1".
+ *
+ * You may obtain a copy of the Apache License at:
+ *
+ * http://www.apache.org/licenses/
+ *
+ * A copy is also included in the downloadable source code package
+ * containing JNA, in file "AL2.0".
  */
 
 package com.sun.jna;
@@ -18,16 +29,11 @@ import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
-import java.util.Iterator;
-import java.util.Map;
-import java.util.Properties;
-import java.util.Map.Entry;
-
 import junit.framework.TestCase;
 
 
 public class PointerTest extends TestCase {
-    
+
     private static final String UNICODE = "[\u0444]";
 
     public void testGetNativeLong() {
@@ -82,7 +88,7 @@ public class PointerTest extends TestCase {
     }
 
     public void testSetNativeMapped() {
-        Pointer p = new Memory(Pointer.SIZE);
+        Pointer p = new Memory(Native.POINTER_SIZE);
         TestPointerType tp = new TestPointerType(p);
 
         p.setValue(0, tp, tp.getClass());
@@ -91,7 +97,7 @@ public class PointerTest extends TestCase {
     }
 
     public void testGetNativeMapped() {
-        Pointer p = new Memory(Pointer.SIZE);
+        Pointer p = new Memory(Native.POINTER_SIZE);
         p.setPointer(0, null);
         Object o = p.getValue(0, TestPointerType.class, null);
         assertNull("Wrong empty value: " + o, o);
@@ -101,14 +107,14 @@ public class PointerTest extends TestCase {
     }
 
     public void testGetStringArray() {
-        Pointer p = new Memory(Pointer.SIZE*3);
+        Pointer p = new Memory(Native.POINTER_SIZE*3);
         final String VALUE1 = getName() + UNICODE;
         final String VALUE2 = getName() + "2" + UNICODE;
         final String ENCODING = "utf8";
 
         p.setPointer(0, new NativeString(VALUE1, ENCODING).getPointer());
-        p.setPointer(Pointer.SIZE, new NativeString(VALUE2, ENCODING).getPointer());
-        p.setPointer(Pointer.SIZE*2, null);
+        p.setPointer(Native.POINTER_SIZE, new NativeString(VALUE2, ENCODING).getPointer());
+        p.setPointer(Native.POINTER_SIZE*2, null);
 
         assertEquals("Wrong null-terminated String array",
                      Arrays.asList(new String[] { VALUE1, VALUE2 }),
@@ -122,8 +128,29 @@ public class PointerTest extends TestCase {
                      Arrays.asList(p.getStringArray(0, 2, ENCODING)));
     }
 
+    public void testGetWideStringArray() {
+        Pointer p = new Memory(Native.POINTER_SIZE*3);
+        final String VALUE1 = getName() + UNICODE;
+        final String VALUE2 = getName() + "2" + UNICODE;
+
+        p.setPointer(0, new NativeString(VALUE1, true).getPointer());
+        p.setPointer(Native.POINTER_SIZE, new NativeString(VALUE2, true).getPointer());
+        p.setPointer(Native.POINTER_SIZE*2, null);
+
+        assertEquals("Wrong null-terminated String array",
+                     Arrays.asList(new String[] { VALUE1, VALUE2 }),
+                     Arrays.asList(p.getWideStringArray(0)));
+
+        assertEquals("Wrong length-specified String array (1)",
+                     Arrays.asList(new String[] { VALUE1 }),
+                     Arrays.asList(p.getWideStringArray(0, 1)));
+        assertEquals("Wrong length-specified String array (2)",
+                     Arrays.asList(new String[] { VALUE1, VALUE2 }),
+                     Arrays.asList(p.getWideStringArray(0, 2)));
+    }
+
     public void testReadPointerArray() {
-        Pointer mem = new Memory(Pointer.SIZE * 2);
+        Pointer mem = new Memory(Native.POINTER_SIZE * 2);
         Pointer[] p = new Pointer[2];
         String VALUE1 = getName();
 
@@ -139,7 +166,7 @@ public class PointerTest extends TestCase {
         assertSame("Pointer object not preserved[1]", orig[1], p[1]);
 
         mem.setPointer(0, null);
-        mem.setPointer(Pointer.SIZE, new Memory(1024));
+        mem.setPointer(Native.POINTER_SIZE, new Memory(1024));
         mem.read(0, p, 0, p.length);
         assertNull("Pointer element not updated[0]", p[0]);
         assertNotSame("Pointer element not updated[1]", orig[1], p[1]);
@@ -154,33 +181,33 @@ public class PointerTest extends TestCase {
     }
 
     public void testReadStringArrayNULLElement() {
-        Memory m = new Memory(Pointer.SIZE);
+        Memory m = new Memory(Native.POINTER_SIZE);
         m.clear();
         String[] arr = m.getStringArray(0, 1);
         assertEquals("Wrong array size", 1, arr.length);
         assertNull("Array element should be null", arr[0]);
     }
 
-    private Object defaultArg(Class type) {
+    private Object defaultArg(Class<?> type) {
         if (type == boolean.class || type == Boolean.class) return Boolean.FALSE;
-        if (type == byte.class || type == Byte.class) return new Byte((byte)0);
-        if (type == char.class || type == Character.class) return new Character((char)0);
-        if (type == short.class || type == Short.class) return new Short((short)0);
-        if (type == int.class || type == Integer.class) return new Integer(0);
-        if (type == long.class || type == Long.class) return new Long(0);
-        if (type == float.class || type == Float.class) return new Float(0);
-        if (type == double.class || type == Double.class) return new Double(0);
+        if (type == byte.class || type == Byte.class) return Byte.valueOf((byte)0);
+        if (type == char.class || type == Character.class) return Character.valueOf((char)0);
+        if (type == short.class || type == Short.class) return Short.valueOf((short)0);
+        if (type == int.class || type == Integer.class) return Integer.valueOf(0);
+        if (type == long.class || type == Long.class) return Long.valueOf(0L);
+        if (type == float.class || type == Float.class) return Float.valueOf(0);
+        if (type == double.class || type == Double.class) return Double.valueOf(0);
         if (type == NativeLong.class) return new NativeLong(0);
         return null;
     }
 
     public void testOpaquePointer() throws Exception {
         Pointer p = Pointer.createConstant(0);
-        Class cls = p.getClass();
+        Class<?> cls = p.getClass();
         Method[] methods = cls.getMethods();
         for (int i=0;i < methods.length;i++) {
             Method m = methods[i];
-            Class[] argTypes = m.getParameterTypes();
+            Class<?>[] argTypes = m.getParameterTypes();
             try {
                 Object[] args = new Object[argTypes.length];
                 for (int arg=0;arg < args.length;arg++) {
